--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">Bəli</string>
   <string name="no">Xeyr</string>
   <string name="delete">Sil</string>
-  <string name="please_wait">Gözləyin...</string>
+  <string name="please_wait">Gözləyin…</string>
   <string name="save">Yaddaşa yaz</string>
   <string name="note_to_self">Nəzərində Saxla</string>
   <!--AbstractNotificationBuilder-->
@@ -29,7 +29,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Bu daimi olaraq Signal və mesaj xəbərdarlıqlarının kilidini açacaq.</string>
   <string name="ApplicationPreferencesActivity_disable">Deaktivə et</string>
   <string name="ApplicationPreferencesActivity_unregistering">Qeydiyyatdan çıxarma</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Signal-a aid mesaj və zənglərin qeydiyyatından çıxmaq...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Signal-a aid mesaj və zənglərin qeydiyyatından çıxmaq…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Signal mesajlarını və zənglərini deaktivə edirsən?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Server qeydiyyatından çıxmaqla Signal mesajları və zənglərini deaktivə et. Gələcəkdə istifadə etmək üçün telefon nömrəni bir daha qeydiyyatdan keçirməli olacaqsan.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Serverə qoşulmada xəta var!</string>
@@ -196,15 +196,15 @@
     <item quantity="other">%1$d faylın yaddaşa yazılması</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Faylın yaddaşa yazılması...</item>
-    <item quantity="other">%1$dfaylın yaddaşa yazılması...</item>
+    <item quantity="one">Faylın yaddaşa yazılması…</item>
+    <item quantity="other">%1$dfaylın yaddaşa yazılması…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Gözlənilir...</string>
+  <string name="ConversationFragment_pending">Gözlənilir…</string>
   <string name="ConversationFragment_push">Məlumat (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Silinir</string>
-  <string name="ConversationFragment_deleting_messages">Mesajların silinməsi...</string>
+  <string name="ConversationFragment_deleting_messages">Mesajların silinməsi…</string>
   <string name="ConversationFragment_quoted_message_not_found">Mesajın əsli tapılmadı</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Mesajın əsli artıq mövcud deyil</string>
   <!--ConversationListActivity-->
@@ -220,7 +220,7 @@
     <item quantity="other">Bu addım seçilmiş %1$d söhbətləşməni həmişəlik siləcək.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Silinir</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Seçilmiş söhbətləşmələrin silinməsi...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Seçilmiş söhbətləşmələrin silinməsi…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Söhbət arxivləşdirildi</item>
     <item quantity="other">%d söhbət arxivləşdirildi</item>
@@ -264,7 +264,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Cihazın bağlılığını ləğv etsən, o daha mesaj göndərə və qəbul edə bilməyəcək.</string>
   <string name="DeviceListActivity_network_connection_failed">Şəbəkə ilə əlaqə alınmadı</string>
   <string name="DeviceListActivity_try_again">Yenidən cəhd et</string>
-  <string name="DeviceListActivity_unlinking_device">Cihazın bağlılığının ləğvi...</string>
+  <string name="DeviceListActivity_unlinking_device">Cihazın bağlılığının ləğvi…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Cihazın bağlılığının ləğvi</string>
   <string name="DeviceListActivity_network_failed">Şəbəkəyə qoşulma alınmadı!</string>
   <!--DeviceListItem-->
@@ -304,7 +304,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Signal parametrlərində bu seçimi istədiyin zaman aktiv və ya deaktiv edə bilərsən (Məxfilik &gt; Linkin ilkin baxışını göndər)</string>
   <string name="ExperienceUpgradeActivity_got_it">Anladım</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Mesajın bərpası...</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Mesajın bərpası…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Həmişəlik Signal ünsiyyət xətası!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal Google Play Servisləri ilə qeydiyyatdan keçə bilmədi. Signal zəngləri və mesajları deaktivə edildi, lütfən Parametrlər &gt; Daha Geniş seçimlərində yenidən qeydiyyatdan keçməyə cəhd et.</string>
@@ -324,10 +324,10 @@
   <string name="GroupCreateActivity_contacts_invalid_number">Qrupundakı üzvlərdən birinin nömrəsi tam oxuna bilmir. Lütfən, xətanı aradan qaldır, yaxud da onu qrupdan xaric et və yenidən sına.</string>
   <string name="GroupCreateActivity_avatar_content_description">Qrupun şəkli</string>
   <string name="GroupCreateActivity_menu_apply_button">Tətbiq et</string>
-  <string name="GroupCreateActivity_creating_group">%1$s hazırlanır...</string>
-  <string name="GroupCreateActivity_updating_group">%1$s yenilənir...</string>
+  <string name="GroupCreateActivity_creating_group">%1$s hazırlanır…</string>
+  <string name="GroupCreateActivity_updating_group">%1$s yenilənir…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">%1$s əlavə edilə bilmədi, çünki onlar Signal istifadəçisi deyil.</string>
-  <string name="GroupCreateActivity_loading_group_details">Qrup detalları yüklənir...</string>
+  <string name="GroupCreateActivity_loading_group_details">Qrup detalları yüklənir…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Sən artıq qrupdasan.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Profil adını və şəklini qrupda paylaşmaq istəyirsən?</string>
@@ -344,7 +344,7 @@
   <string name="InviteActivity_share">Paylaş</string>
   <string name="InviteActivity_choose_contacts">Əlaqələri seç</string>
   <string name="InviteActivity_cancel">Ləğv et</string>
-  <string name="InviteActivity_sending">Göndərilir...</string>
+  <string name="InviteActivity_sending">Göndərilir…</string>
   <string name="InviteActivity_heart_content_description">Ürək</string>
   <string name="InviteActivity_invitations_sent">Dəvətnamələr göndərildi!</string>
   <string name="InviteActivity_invite_to_signal">Signal-a dəvət et</string>
@@ -360,7 +360,7 @@
   <string name="InviteActivity_no_app_to_share_to">Elə görünür ki, paylaşa biləcəyin aplikasiya yoxdur.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Dostlar dostlara şifrələnməmiş yazışmaya icazə vermir.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Pərdə arxası iş gedir...</string>
+  <string name="Job_working_in_the_background">Pərdə arxası iş gedir…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Göndərə bilmədik</string>
   <string name="MessageDetailsRecipient_new_safety_number">Yeni təhlükəsizlik rəqəmi</string>
@@ -384,10 +384,10 @@
     <item quantity="other">Bu addımla seçilmiş %1$d mesaj həmişəlik silinəcək.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Silinir</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Mesajların silinməsi...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Mesajların silinməsi…</string>
   <string name="MediaOverviewActivity_Documents">Sənədlər</string>
   <string name="MediaOverviewActivity_Select_all">Hamısını seç</string>
-  <string name="MediaOverviewActivity_collecting_attachments">Faylların toplanması...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Faylların toplanması…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal zəngi baş verməkdədir</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal zəngi hazırlanır</string>
@@ -405,7 +405,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Seçmək üçün kliklə</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Başlıq əlavə et...</string>
+  <string name="MediaSendActivity_add_a_caption">Başlıq əlavə et…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Ölçüsü limiti aşdığı üçün fayl silindi</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera işə salına bimir</string>
   <string name="MediaSendActivity_message_to_s">%s istifadəçisinə mesaj</string>
@@ -452,7 +452,7 @@
         \n• Sənin adından mesaj göndərsin
     </string>
   <string name="DeviceProvisioningActivity_content_progress_title">Cihazla bağlantının qurulması</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Yeni cihazla bağlantının qurulması...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Yeni cihazla bağlantının qurulması…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Cihaz təsdiq edildi!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Cihaz tapılmadı.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Şəbəkə xətası.</string>
@@ -636,7 +636,7 @@
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Sənin əlaqən Signal-ın köhnə versiyasını istifadə edir. Sənin təhlükəsizlik rəqəmini təsdiq etməmişdən əvvəl proqramı yeniləməsini xahiş et.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Sənin əlaqən uyğun olmayan QR şifrə ilə Signal-ın yeni versiyasını istifadə edir. Müqayisə etmək üçün zəhmət olmasa yenilə.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Skan edilmiş QR şifrə təhlükəsizlik rəqəminin təsdiq şifrəsini düzgün formatlamadı. Zəhmət olmasa yenidən skan et.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Təhlükəsizlik rəqəmini bu vasitə ilə paylaş...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Təhlükəsizlik rəqəmini bu vasitə ilə paylaş…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Bizim Signal təhlükəsizlik rəqəmimiz:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Elə görünür ki, paylaşa biləcəyin aplikasiya yoxdur.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Mübadilə buferində müqayisə etmək üçün təhlükəsizlik rəqəmi tapılmadı</string>
@@ -764,7 +764,7 @@
   <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Əlaqə yoxdur.</string>
-  <string name="contact_selection_group_activity__finding_contacts">Əlaqələr yüklənir...</string>
+  <string name="contact_selection_group_activity__finding_contacts">Əlaqələr yüklənir…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">Əlaqə Şəkli</string>
   <!--ContactSelectionListFragment-->
@@ -884,8 +884,8 @@
   <string name="log_submit_activity__button_got_it">Anladım</string>
   <string name="log_submit_activity__button_compose_email">Email yazmağa başla</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Bu qeyd əməkdaşların baxışı üçün ictimai olaraq paylaşılacaqdır, təqdim etməzdən əvvəl sən ona müəyyən dəyişikliklər edə bilərsən.</string>
-  <string name="log_submit_activity__loading_logs">Girişlər yüklənir...</string>
-  <string name="log_submit_activity__uploading_logs">Girişlər əlavə edilir...</string>
+  <string name="log_submit_activity__loading_logs">Girişlər yüklənir…</string>
+  <string name="log_submit_activity__uploading_logs">Girişlər əlavə edilir…</string>
   <string name="log_submit_activity__success">Müvəffəqiyyətlə bitdi!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">URL-i köçür və onu xəta hesabatına və ya dəstək emailinə əlavə et:\n\n<b>%1$s</b>\n</string>
   <string name="log_submit_activity__copied_to_clipboard">Mübadilə buferinə köçürüldü</string>
@@ -911,7 +911,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">BAX</string>
   <string name="message_recipients_list_item__resend">YENİDƏN GÖNDƏR</string>
-  <string name="message_recipients_list_item__resending">Yenidən göndərilir...</string>
+  <string name="message_recipients_list_item__resending">Yenidən göndərilir…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s qrupa qoşuldu.</item>
@@ -963,7 +963,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[%s ilə şifrələnmənin təhlükəsizliyini təsdiq etmək isyəyirsənsə, yuxarıdakı nömrə ilə onların cihazındakı nömrəni müqayisə et. Yaxud da, onların cihazındakı şifrəni skan edə bilərsən, ya da onlar sənin cihazındakı şifrəni skan edə bilərlər. <a href="https://signal.org/redirect/safety-numbers">Daha ətraflı.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Skan üçün kliklə</string>
-  <string name="verify_display_fragment__loading">Yüklənir...</string>
+  <string name="verify_display_fragment__loading">Yüklənir…</string>
   <string name="verify_display_fragment__verified">Təsdiq edildi</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Təhlükəsizlik rəqəmini paylaş</string>
@@ -1133,7 +1133,7 @@
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Bu şəxsə yeni mesaj...</string>
+  <string name="contact_selection_list__unknown_contact">Bu şəxsə yeni mesaj…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Zəng</string>
   <!--conversation_callable_secure-->
@@ -1234,12 +1234,12 @@
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Silinir</string>
-  <string name="trimmer__deleting_old_messages">Köhnə mesajların silinməsi...</string>
+  <string name="trimmer__deleting_old_messages">Köhnə mesajların silinməsi…</string>
   <string name="trimmer__old_messages_successfully_deleted">Köhnə mesajlar müvəffəqiyyətlə silindi</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ötürülmə ikonası</string>
-  <string name="ConversationListFragment_loading">Yüklənir...</string>
-  <string name="CallNotificationBuilder_connecting">Əlaqə yaradılır...</string>
+  <string name="ConversationListFragment_loading">Yüklənir…</string>
+  <string name="CallNotificationBuilder_connecting">Əlaqə yaradılır…</string>
   <string name="Permissions_permission_required">İcazə tələb edilir</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">SMS göndərə bilməsi üçün Signal-ın SMS seçimlərinə giriş icazəsi olmalıdır ki, o da hal hazırda qadağa edilmişdir. Davam edə bilmək üçün zəhmət olmasa aplikasiya parametrləri menyusuna, oradan isə \"İcazələr bölməsinə keçərək \"SMS\" hissəsini aktivləşdir.</string>
   <string name="Permissions_continue">Davam et</string>
@@ -1264,8 +1264,8 @@
   <string name="RegistrationActivity_restore">Bərpa et</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Signal-ın yeni versiyalarından arxivləri daxil edə bilmirik</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Arxiv üçün səhv şifrə ifadəsi</string>
-  <string name="RegistrationActivity_checking">Yoxlanılır...</string>
-  <string name="RegistrationActivity_d_messages_so_far">İndiyə qədər %d mesaj...</string>
+  <string name="RegistrationActivity_checking">Yoxlanılır…</string>
+  <string name="RegistrationActivity_d_messages_so_far">İndiyə qədər %d mesaj…</string>
   <string name="RegistrationActivity_restore_from_backup">Arxivdən bərpa edirsən?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Mesaj və medialarını yerli arxivdən bərpa et. Bərpanı indi etməsən, sonra bu şansın olmayacaq.</string>
   <string name="RegistrationActivity_backup_size_s">Arxivləşdiriləcək ölçü: %s</string>
@@ -1280,7 +1280,7 @@
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Arxivə məlumat yerləşdirə bilməsi üçün Signal-ın xarici yaddaş seçimlərinə giriş icazəsi olmalıdır ki, o da hal hazırda qadağa edilmişdir. Davam edə bilmək üçün zəhmət olmasa aplikasiya parametrləri menyusuna, oradan isə \"İcazələr bölməsinə keçərək \"Yaddaş\" hissəsini aktivləşdir.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Son arxiv: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Proses davam edir</string>
-  <string name="LocalBackupJob_creating_backup">Arxiv yaradılır...</string>
+  <string name="LocalBackupJob_creating_backup">Arxiv yaradılır…</string>
   <string name="ProgressPreference_d_messages_so_far">İndiyə qədər %d mesaj</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Zəhmət olmasa %s ünvanına göndərilmiş təsdiq şifrəsini daxil et.</string>
   <string name="RegistrationActivity_wrong_number">Səhv rəqəm</string>
