--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -12,7 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+ %d</string>
   <!--ApplicationMigrationActivity-->
-  <string name="ApplicationMigrationActivity__signal_is_updating">Signal se aktualizuje...</string>
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal se aktualizuje…</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Aktuálně: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Dosud nemáte nastavené heslo!</string>
@@ -70,7 +70,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signál potřebuje oprávnění pro přístup k fotoaparátu aby mohl pořizovat fotografie, ale toto oprávnění je nyní zakázáno. Prosím pokračujte do menu nastavení aplikací, vyberte \"Oprávnění\" a povolte \"Fotoaparát\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Nahrávám médium…</string>
-  <string name="AttachmentUploadJob_compressing_video_start">Komprimování videa...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Komprimování videa…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Chyba při přehrávání audia!</string>
   <!--BlockedContactsActivity-->
@@ -245,7 +245,7 @@
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Mažu</string>
-  <string name="ConversationFragment_deleting_messages">Mažu zprávy...</string>
+  <string name="ConversationFragment_deleting_messages">Mažu zprávy…</string>
   <string name="ConversationFragment_quoted_message_not_found">Původní zpráva nebyla nalezena</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Původní zpráva již není dostupná</string>
   <string name="ConversationFragment_failed_to_open_message">Zprávu se nepovedlo otevřít</string>
@@ -268,7 +268,7 @@
     <item quantity="other">Tímto trvale smažete všech %1$d označených konverzací.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Mažu</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Mažu označené konverzace...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Mažu označené konverzace…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Konverzace archivována</item>
     <item quantity="few">%d konverzace archivovány</item>
@@ -317,7 +317,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Rozpojením toho zařízení nebude dále možno posílat a přijímat zprávy.</string>
   <string name="DeviceListActivity_network_connection_failed">Nepodařilo se připojit</string>
   <string name="DeviceListActivity_try_again">Zkusit znovu</string>
-  <string name="DeviceListActivity_unlinking_device">Rozpojování zařízení...</string>
+  <string name="DeviceListActivity_unlinking_device">Rozpojování zařízení…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Odděluji zařízení</string>
   <string name="DeviceListActivity_network_failed">Síť selhala</string>
   <!--DeviceListItem-->
@@ -357,7 +357,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Tuto funkcionalitu můžete zakázat či povolit v Nastavení (Soukromí &gt; Odesílat náhledy odkazu)</string>
   <string name="ExperienceUpgradeActivity_got_it">Rozumím</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Načítám zprávu...</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Načítám zprávu…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Trvalá chyba komunikace Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal se nemůže registrovat k službě Google Play. Zprávy a volání jsou proto zakázány: Prosím zkuste se znovu registrovat v menu Nastavení &gt; Rozšířené.</string>
@@ -378,7 +378,7 @@
   <string name="GroupCreateActivity_avatar_content_description">Obrázek skupiny</string>
   <string name="GroupCreateActivity_menu_apply_button">Použít</string>
   <string name="GroupCreateActivity_creating_group">Vytvářím %1$s…</string>
-  <string name="GroupCreateActivity_updating_group">Aktualizuji %1$s...</string>
+  <string name="GroupCreateActivity_updating_group">Aktualizuji %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Nemohu přidat %1$s protože není uživatelem Signal.</string>
   <string name="GroupCreateActivity_loading_group_details">Načítám podrobnosti skupiny…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Již jste ve skupině.</string>
@@ -397,7 +397,7 @@
   <string name="InviteActivity_share">Sdílet</string>
   <string name="InviteActivity_choose_contacts">Vyberte kontakty</string>
   <string name="InviteActivity_cancel">Storno</string>
-  <string name="InviteActivity_sending">Odesílám...</string>
+  <string name="InviteActivity_sending">Odesílám…</string>
   <string name="InviteActivity_heart_content_description">Srdíčko</string>
   <string name="InviteActivity_invitations_sent">Pozvánka odeslána!</string>
   <string name="InviteActivity_invite_to_signal">Pozvat do Signalu</string>
@@ -417,7 +417,7 @@
   <string name="InviteActivity_no_app_to_share_to">Zdá se, že nemáte žádnou aplikaci pro sdílení.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Přátelé nenechávají přátele komunikovat nešifrovaně.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Práce na pozadí...</string>
+  <string name="Job_working_in_the_background">Práce na pozadí…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Nepodařilo se odeslat</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nové bezpečnostní kódy</string>
@@ -445,10 +445,10 @@
     <item quantity="other">Tímto trvale smažete všech %1$d označených zpráv.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Mažu</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Mažu zprávy...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Mažu zprávy…</string>
   <string name="MediaOverviewActivity_Documents">Dokumenty</string>
   <string name="MediaOverviewActivity_Select_all">Označit vše</string>
-  <string name="MediaOverviewActivity_collecting_attachments">Shromažďuji přílohy...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Shromažďuji přílohy…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Probíhá Signal volání</string>
   <string name="NotificationBarManager__establishing_signal_call">Navazuji Signal hovor</string>
@@ -467,7 +467,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Klepněte pro výběr</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Přidat titulek...</string>
+  <string name="MediaSendActivity_add_a_caption">Přidat titulek…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Položka byla odebrána, protože překročila povolenou velikost.</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera není dostupná.</string>
   <string name="MediaSendActivity_message_to_s">Zpráva %s</string>
@@ -518,7 +518,7 @@
 . Číst všechny vaše zprávy
 \n. Poslat zprávy vaším jménem</string>
   <string name="DeviceProvisioningActivity_content_progress_title">Provazuji zařízení</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Provazuji nové zařízení...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Provazuji nové zařízení…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Zařízení schváleno!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Nenalezeno žádné zařízení.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Chyba sítě.</string>
@@ -712,7 +712,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Váš kontakt používá starou verzi aplikace Signal. Před kontrolou bezpečnostních kódů jej prosím požádejte, aby si aplikaci aktualizoval.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Váš kontakt používá novější verzi Signal s nekompatibilním formátem QR kódu. Prosím, aktualizujte svou verzi, abyste mohli QR kódy porovnat.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Naskenovaný QR kód nemá správný formát bezpečnostního kódu. Prosím naskenujte QR kód znovu.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Sdílet bezpečnostní kód prostřednictvím ...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Sdílet bezpečnostní kód prostřednictvím …</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Náš bezpečnostní kód Signal:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Zdá se, že nemáte žádnou aplikaci pro sdílení.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Ve schránce nebyl nalezen žádný bezpečnostní kód pro porovnání.</string>
@@ -853,7 +853,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="contact_filter_toolbar__show_dial_pad_description">Zobrazit číselník</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Žádný kontakt</string>
-  <string name="contact_selection_group_activity__finding_contacts">Načítám kontakty...</string>
+  <string name="contact_selection_group_activity__finding_contacts">Načítám kontakty…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">Fotografie kontaktu</string>
   <!--ContactSelectionListFragment-->
@@ -892,7 +892,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Fotografie kontaktu</string>
   <!--audio_view-->
-  <string name="audio_view__play_pause_accessibility_description">Spustit ... Pozastavit</string>
+  <string name="audio_view__play_pause_accessibility_description">Spustit … Pozastavit</string>
   <string name="audio_view__download_accessibility_description">Stáhnout</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Audio</string>
@@ -906,7 +906,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Posun na konec</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Načítám země...</string>
+  <string name="country_selection_fragment__loading_countries">Načítám země…</string>
   <string name="country_selection_fragment__search">Hledat</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Scanovat QR kód zobrazený na zařízení pro provázání</string>
@@ -987,8 +987,8 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="log_submit_activity__button_got_it">Rozumím</string>
   <string name="log_submit_activity__button_compose_email">Vytvořit email</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Tento log bude odeslán a zveřejněn online pro vývojáře. Před odesláním si můžete log prohlédnout či editovat.</string>
-  <string name="log_submit_activity__loading_logs">Načítám logy...</string>
-  <string name="log_submit_activity__uploading_logs">Odesílám logy...</string>
+  <string name="log_submit_activity__loading_logs">Načítám logy…</string>
+  <string name="log_submit_activity__uploading_logs">Odesílám logy…</string>
   <string name="log_submit_activity__success">Úspěšně dokončeno!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Zkopirujte toto URL a doplňte do hlášeného problému nebo emalu podpoře:\n\n<b>%1$s</b>\n</string>
   <string name="log_submit_activity__copied_to_clipboard">Zkopírováno do schránky</string>
@@ -1014,7 +1014,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">ZOBRAZIT</string>
   <string name="message_recipients_list_item__resend">ZNOVU POSLAT</string>
-  <string name="message_recipients_list_item__resending">Posílám znovu...</string>
+  <string name="message_recipients_list_item__resending">Posílám znovu…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s se připojil ke skupině.</item>
@@ -1068,7 +1068,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Pokud chcete zkontrolovat bezpečnost šifrované komunikace s %s, porovnejte čísla nahoře na vašem zařízení s čísly na zařízení vašeho kontaktu. Můžete také oskenovat kód na jeho telefonu, nebo jej požádat, aby oskenoval kód na vašem zařízení. <a href="https://signal.org/redirect/safety-numbers">Zjistěte více o kontrolních kódech.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Klepnutím skenovat</string>
-  <string name="verify_display_fragment__loading">Načítám...</string>
+  <string name="verify_display_fragment__loading">Načítám…</string>
   <string name="verify_display_fragment__verified">Ověřeno</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Sdílet bezpečnostní kód</string>
@@ -1246,7 +1246,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Nová zpráva ...</string>
+  <string name="contact_selection_list__unknown_contact">Nová zpráva …</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Volat</string>
   <!--conversation_callable_secure-->
@@ -1351,12 +1351,12 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Mažu</string>
-  <string name="trimmer__deleting_old_messages">Mazání starých zpráv...</string>
+  <string name="trimmer__deleting_old_messages">Mazání starých zpráv…</string>
   <string name="trimmer__old_messages_successfully_deleted">Staré zprávy byly úspěšně smazány.</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona přenosu</string>
-  <string name="ConversationListFragment_loading">Načítám...</string>
-  <string name="CallNotificationBuilder_connecting">Probíhá připojování...</string>
+  <string name="ConversationListFragment_loading">Načítám…</string>
+  <string name="CallNotificationBuilder_connecting">Probíhá připojování…</string>
   <string name="Permissions_permission_required">Vyžadovaná oprávnění</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signál potřebuje oprávnění pro přístup k SMS aby mohl posílat SMS zprávy, ale toto oprávnění je nyní zakázáno. Prosím pokračujte do menu nastavení aplikací, vyberte \"Oprávnění\" a povolte \"SMS\".
 </string>
@@ -1382,8 +1382,8 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="RegistrationActivity_restore">Obnovení</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Nemohu naimportovat zálohy z novější verze aplikace Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Chybné heslo k záloze</string>
-  <string name="RegistrationActivity_checking">Kontroluji...</string>
-  <string name="RegistrationActivity_d_messages_so_far">%dzpráv zatím...</string>
+  <string name="RegistrationActivity_checking">Kontroluji…</string>
+  <string name="RegistrationActivity_d_messages_so_far">%dzpráv zatím…</string>
   <string name="RegistrationActivity_restore_from_backup">Obnovit ze zálohy?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Obnovte vaši konverzaci a media z lokální zálohy. Pokud je neobnovíte teď, v budoucnu to již nebude možné.</string>
   <string name="RegistrationActivity_backup_size_s">Velikost zálohy: %s</string>
@@ -1398,7 +1398,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signál potřebuje oprávnění pro přístup k úložišti, aby mohl vytvářet zálohy, ale toto oprávnění je nyní trvale zakázáno. Prosím pokračujte do menu nastavení aplikací, vyberte \"Oprávnění\" a povolte \"Úložiště\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Poslední záloha: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Probíhá</string>
-  <string name="LocalBackupJob_creating_backup">Vytvářím zálohu...</string>
+  <string name="LocalBackupJob_creating_backup">Vytvářím zálohu…</string>
   <string name="ProgressPreference_d_messages_so_far">%dzpráv zatím</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Prosím vložte ověřovací kód zaslaný %s</string>
   <string name="RegistrationActivity_wrong_number">Chybné číslo</string>
