--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -217,15 +217,15 @@
     <item quantity="other">Tallennetaan %1$d liitetiedostoa</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Tallennetaan liitetiedostoa tallennustilaan...</item>
-    <item quantity="other">Tallennetaan %1$d liitetiedostoa tallennustilaan...</item>
+    <item quantity="one">Tallennetaan liitetiedostoa tallennustilaan…</item>
+    <item quantity="other">Tallennetaan %1$d liitetiedostoa tallennustilaan…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Käsiteltävänä...</string>
+  <string name="ConversationFragment_pending">Käsiteltävänä…</string>
   <string name="ConversationFragment_push">Tietoverkko (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Poistetaan</string>
-  <string name="ConversationFragment_deleting_messages">Viestejä poistetaan...</string>
+  <string name="ConversationFragment_deleting_messages">Viestejä poistetaan…</string>
   <string name="ConversationFragment_quoted_message_not_found">Alkuperäistä viestiä ei löytynyt</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Alkuperäinen viesti ei ole enää saatavilla</string>
   <string name="ConversationFragment_failed_to_open_message">Viestin avaaminen epäonnistui</string>
@@ -244,7 +244,7 @@
     <item quantity="other">Tämä poistaa pysyvästi kaikki %1$d valittua keskustelua.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Poistetaan</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Poistetaan valittuja keskusteluja...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Poistetaan valittuja keskusteluja…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Keskustelu arkistoitu</item>
     <item quantity="other">%d keskustelua arkistoitu</item>
@@ -289,7 +289,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Jos poistat tämän laitteen, sillä ei voi enää lähettää eikä vastaanottaa viestejä.</string>
   <string name="DeviceListActivity_network_connection_failed">Verkkoyhteyden muodostus epäonnistui</string>
   <string name="DeviceListActivity_try_again">Yritä uudelleen</string>
-  <string name="DeviceListActivity_unlinking_device">Poistetaan laitetta...</string>
+  <string name="DeviceListActivity_unlinking_device">Poistetaan laitetta…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Poistetaan laitetta</string>
   <string name="DeviceListActivity_network_failed">Verkkoyhteysvirhe!</string>
   <!--DeviceListItem-->
@@ -329,7 +329,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Voit poistaa tämän ominaisuuden käytöstä tai ottaa sen käyttöön milloin tahansa Signalin asetuksissa (Yksityisyys &gt; Lähetä esikatselukuva linkeistä).</string>
   <string name="ExperienceUpgradeActivity_got_it">Selvä</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Haetaan viestiä...</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Haetaan viestiä…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Pysyvä Signal-yhteysvirhe!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal ei voinut rekisteröityä Google Play Services -palveluun, minkä vuoksi Signal-viestit ja puhelut ovat otettu pois käytöstä. Kokeile rekisteröityä uudelleen Signalin lisäasetuksista.</string>
@@ -350,9 +350,9 @@
   <string name="GroupCreateActivity_avatar_content_description">Ryhmän kuvake</string>
   <string name="GroupCreateActivity_menu_apply_button">Valmis</string>
   <string name="GroupCreateActivity_creating_group">Luodaan %1$s…</string>
-  <string name="GroupCreateActivity_updating_group">Päivitetään %1$s...</string>
+  <string name="GroupCreateActivity_updating_group">Päivitetään %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Yhteystietoa %1$s ei voitu lisätä ryhmään, koska hän ei ole Signalin-käyttäjä</string>
-  <string name="GroupCreateActivity_loading_group_details">Ladataan ryhmän tiedot...</string>
+  <string name="GroupCreateActivity_loading_group_details">Ladataan ryhmän tiedot…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Olet jo ryhmässä.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Jaa profiilikuvasi ja -nimesi tämän ryhmän kanssa?</string>
@@ -369,7 +369,7 @@
   <string name="InviteActivity_share">Jaa</string>
   <string name="InviteActivity_choose_contacts">Valitse yhteystietoja</string>
   <string name="InviteActivity_cancel">Peruuta</string>
-  <string name="InviteActivity_sending">Lähetetään...</string>
+  <string name="InviteActivity_sending">Lähetetään…</string>
   <string name="InviteActivity_heart_content_description">Sydän</string>
   <string name="InviteActivity_invitations_sent">Kutsut lähetetty!</string>
   <string name="InviteActivity_invite_to_signal">Kutsu Signaliin</string>
@@ -385,7 +385,7 @@
   <string name="InviteActivity_no_app_to_share_to">Näyttää siltä, ettei sinulla ole yhtään sovellusta, johon jakaa.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Kaveri ei anna kaverin keskustella ilman salausta.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Taustatyöskentely käynnissä...</string>
+  <string name="Job_working_in_the_background">Taustatyöskentely käynnissä…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Lähetys epäonnistui</string>
   <string name="MessageDetailsRecipient_new_safety_number">Uusi turvanumero</string>
@@ -409,10 +409,10 @@
     <item quantity="other">Tämä poistaa pysyvästi kaikki %1$d valittua viestiä.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Poistetaan</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Viestejä poistetaan...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Viestejä poistetaan…</string>
   <string name="MediaOverviewActivity_Documents">Dokumentit</string>
   <string name="MediaOverviewActivity_Select_all">Valitse kaikki</string>
-  <string name="MediaOverviewActivity_collecting_attachments">Kerätään liitetiedostoja...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Kerätään liitetiedostoja…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal-puhelu käynnissä</string>
   <string name="NotificationBarManager__establishing_signal_call">Muodostetaan Signal-puhelua</string>
@@ -431,7 +431,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Valitse napauttamalla</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Lisää kuvateksti...</string>
+  <string name="MediaSendActivity_add_a_caption">Lisää kuvateksti…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Kohde poistettiin, koska se ylitti kokorajan</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera ei käytettävissä</string>
   <string name="MediaSendActivity_message_to_s">Vastaanottaja: %s</string>
@@ -480,7 +480,7 @@
 • lukea kaikki viestisi
 \n• lähettää viestejä sinun nimelläsi</string>
   <string name="DeviceProvisioningActivity_content_progress_title">Yhdistetään laitetta</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Yhdistetään uutta laitetta...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Yhdistetään uutta laitetta…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Laite hyväksytty!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Laitetta ei löytynyt.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Verkkovirhe.</string>
@@ -674,7 +674,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Yhteystietosi käyttää vanhaa versiota Signalista. Pyydä häntä päivittämään, jotta voit varmentaa turvanumeron.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Yhteystietosi käyttää uudempaa versiota Signalista, jonka QR-koodi ei toimi oman versiosi kanssa. Päivitä Signalisi uusimpaan versioon.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Skannaamasi QR-koodi ei ole oikeanmallinen turvanumerokoodi. Yritä skannata uudelleen.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Jaa turvanumero...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Jaa turvanumero…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Meidän Signal-turvanumeromme:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Näyttää siltä, ettei sinulla ole yhtään sovellusta, johon jakaa.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Leikepöydältä ei löytynyt turvanumeroa, johon verrata</string>
@@ -866,7 +866,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Vieritä alas</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Ladataan maita...</string>
+  <string name="country_selection_fragment__loading_countries">Ladataan maita…</string>
   <string name="country_selection_fragment__search">Hae</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Skannaa yhdistettävän laitteen ruudulla näkyvä QR-koodi</string>
@@ -935,8 +935,8 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="log_submit_activity__button_got_it">Ymmärrän</string>
   <string name="log_submit_activity__button_compose_email">Uusi sähköposti</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Tämä loki lähetetään Internetiin, jossa se on julkisesti kehittäjien nähtävillä. Voit tutkia ja muokata sitä ennen kuin lähetät sen.</string>
-  <string name="log_submit_activity__loading_logs">Ladataan lokeja...</string>
-  <string name="log_submit_activity__uploading_logs">Lähetetään lokeja...</string>
+  <string name="log_submit_activity__loading_logs">Ladataan lokeja…</string>
+  <string name="log_submit_activity__uploading_logs">Lähetetään lokeja…</string>
   <string name="log_submit_activity__success">Onnistui!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Kopioi tämä URL ja liitä se bugiraporttiisi tai lähetä se tuen sähköpostiin:\n\n%1$s\n</string>
   <string name="log_submit_activity__copied_to_clipboard">Kopioitu leikepöydälle</string>
@@ -962,7 +962,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">NÄYTÄ</string>
   <string name="message_recipients_list_item__resend">LÄHETÄ UUDELLEEN</string>
-  <string name="message_recipients_list_item__resending">Uudelleenlähetetään...</string>
+  <string name="message_recipients_list_item__resending">Uudelleenlähetetään…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s liittyi ryhmään</item>
@@ -1014,7 +1014,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Jos haluat varmentaa sinun ja yhteystiedon %s välisen salauksen tietoturvan, vertaa ylläolevia numeroita hänen laitteessaan näkyviin vastaaviin numeroihin. Vaihtoehtoisesti voit skannata koodin hänen puhelimestaan, tai pyytä häntä skannaamaan sinun koodisi. <a href="https://signal.org/redirect/safety-numbers">Lue lisää.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Skannaa napauttamalla</string>
-  <string name="verify_display_fragment__loading">Ladataan...</string>
+  <string name="verify_display_fragment__loading">Ladataan…</string>
   <string name="verify_display_fragment__verified">Varmennettu</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Jaa turvanumero</string>
@@ -1190,7 +1190,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Uusi viesti henkilölle...</string>
+  <string name="contact_selection_list__unknown_contact">Uusi viesti henkilölle…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Soita</string>
   <!--conversation_callable_secure-->
@@ -1293,12 +1293,12 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Poistetaan</string>
-  <string name="trimmer__deleting_old_messages">Vanhoja viestejä poistetaan...</string>
+  <string name="trimmer__deleting_old_messages">Vanhoja viestejä poistetaan…</string>
   <string name="trimmer__old_messages_successfully_deleted">Vanhojen viestien poisto onnistui</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Tyypin kuvake</string>
-  <string name="ConversationListFragment_loading">Ladataan...</string>
-  <string name="CallNotificationBuilder_connecting">Yhdistetään...</string>
+  <string name="ConversationListFragment_loading">Ladataan…</string>
+  <string name="CallNotificationBuilder_connecting">Yhdistetään…</string>
   <string name="Permissions_permission_required">Tarvitaan käyttöoikeus</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal tarvitsee tekstiviestien käyttöoikeutta niiden lähettämistä varten, mutta tämä käyttöoikeus on pysyvästi evätty Signalilta. Voit muuttaa tätä menemällä sovellusten asetuksiin, valitsemalla \"Sovelluksen käyttöoikeudet\" ja laittamalla päälle \"Tekstiviestit\".</string>
   <string name="Permissions_continue">Jatka</string>
@@ -1323,8 +1323,8 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="RegistrationActivity_restore">Palauta</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Varmuuskopioita ei voida tuoda Signalin uudemmista versioista</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Virheellinen varmuuskopion salalause</string>
-  <string name="RegistrationActivity_checking">Tarkistetaan...</string>
-  <string name="RegistrationActivity_d_messages_so_far">%d viestiä tähän mennessä...</string>
+  <string name="RegistrationActivity_checking">Tarkistetaan…</string>
+  <string name="RegistrationActivity_d_messages_so_far">%d viestiä tähän mennessä…</string>
   <string name="RegistrationActivity_restore_from_backup">Palautetaanko varmuuskopiosta?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Palauta viestisi ja mediasi paikallisesta varmuuskopiostasi. Jos et palauta niitä nyt, et voi palauttaa niitä enää myöhemmin.</string>
   <string name="RegistrationActivity_backup_size_s">Varmuuskopion koko: %s</string>
@@ -1339,7 +1339,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal tarvitsee lupaa käyttää laitteesi tallennustilaa varmuuskopioiden luomista varten, mutta tämä käyttöoikeus on pysyvästi evätty Signalilta. Voit muuttaa tätä menemällä sovellusten asetuksiin, valitsemalla \"Sovelluksen käyttöoikeudet\" ja laittamalla päälle \"Tallennustila\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Viimeksi varmuuskopioitu: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Meneillään</string>
-  <string name="LocalBackupJob_creating_backup">Luodaan varmuuskopiota...</string>
+  <string name="LocalBackupJob_creating_backup">Luodaan varmuuskopiota…</string>
   <string name="ProgressPreference_d_messages_so_far">%d viestiä tähän mennessä</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Syötä vahvistuskoodi, joka lähetettiin numeroon %s.</string>
   <string name="RegistrationActivity_wrong_number">Väärä numero</string>
