--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -12,7 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationMigrationActivity-->
-  <string name="ApplicationMigrationActivity__signal_is_updating">Mise à jour Signal... </string>
+  <string name="ApplicationMigrationActivity__signal_is_updating">Mise à jour Signal… </string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Actuellement : %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Vous n’avez pas encore défini de phrase de passe !</string>
@@ -64,7 +64,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal exige l’autorisation « Appareil photo » afin de prendre des photos, mais elle a été refusée définitivement. Veuillez accéder au menu des paramètres des applis, sélectionner « Autorisations » et activer « Appareil photo ».</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Téléversement du média…</string>
-  <string name="AttachmentUploadJob_compressing_video_start">Compression de la vidéo...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Compression de la vidéo…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Erreur de lecture du son !</string>
   <!--BlockedContactsActivity-->
@@ -843,7 +843,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Photo du contact</string>
   <!--audio_view-->
-  <string name="audio_view__play_pause_accessibility_description">Lecture ... Pause</string>
+  <string name="audio_view__play_pause_accessibility_description">Lecture … Pause</string>
   <string name="audio_view__download_accessibility_description">Télécharger</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Son</string>
