--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">Da</string>
   <string name="no">Ne</string>
   <string name="delete">Obriši</string>
-  <string name="please_wait">Sačekajte...</string>
+  <string name="please_wait">Sačekajte…</string>
   <string name="save">Spremi</string>
   <string name="note_to_self">Osobna bilješka</string>
   <!--AbstractNotificationBuilder-->
@@ -31,7 +31,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Trajno ćete otključati Signal i obavijesti o porukama.</string>
   <string name="ApplicationPreferencesActivity_disable">Onemogući</string>
   <string name="ApplicationPreferencesActivity_unregistering">Uklanjanje registracije</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Uklanjanje registracije na Signal poruke i pozive...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Uklanjanje registracije na Signal poruke i pozive…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Onemogući Signal poruke i pozive?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Onemogućite Signal poruke i pozive tako što će ukloniti registraciju s poslužitelja. Trebat ćete ponovno registrirati vaš broj telefona kako biste ih koristili u budućnosti.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Greška prilikom povezivanja na poslužitelj!</string>
@@ -217,16 +217,16 @@
     <item quantity="other">Spremanje %1$d privitaka</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Spremanje privitaka na disk...</item>
-    <item quantity="few">Spremanje %1$d privitka na disk...</item>
-    <item quantity="other">Spremanje %1$d privitaka na disk...</item>
+    <item quantity="one">Spremanje privitaka na disk…</item>
+    <item quantity="few">Spremanje %1$d privitka na disk…</item>
+    <item quantity="other">Spremanje %1$d privitaka na disk…</item>
   </plurals>
-  <string name="ConversationFragment_pending">U toku...</string>
+  <string name="ConversationFragment_pending">U toku…</string>
   <string name="ConversationFragment_push">Podaci (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Brisanje</string>
-  <string name="ConversationFragment_deleting_messages">Brisanje poruka...</string>
+  <string name="ConversationFragment_deleting_messages">Brisanje poruka…</string>
   <string name="ConversationFragment_quoted_message_not_found">Originalna poruka nije pronađena</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Originalna poruka više nije dostupna</string>
   <!--ConversationListActivity-->
@@ -244,7 +244,7 @@
     <item quantity="other">Ovo će trajno obrisati %1$d odabranih razgovora.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Brisanje</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Brisanje odabranih razgovora...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Brisanje odabranih razgovora…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Razgovori arhivirani</item>
     <item quantity="few">%d razgovora arhivirana</item>
@@ -290,7 +290,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Odspajanjem ovog uređaja više nećete moći slati ili primati poruke.</string>
   <string name="DeviceListActivity_network_connection_failed">Greška prilikom spajanja na mrežu</string>
   <string name="DeviceListActivity_try_again">Pokušajte ponovno</string>
-  <string name="DeviceListActivity_unlinking_device">Odspajanje uređaja...</string>
+  <string name="DeviceListActivity_unlinking_device">Odspajanje uređaja…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Odspajanje uređaja</string>
   <string name="DeviceListActivity_network_failed">Greška mreže!</string>
   <!--DeviceListItem-->
@@ -330,7 +330,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Ovu funkciju možete onemogućiti ili omogućiti u bilo kojem trenutku u postavkama Signal-a (postavke Privatnost &gt; Slanje Pregleda Linkova).</string>
   <string name="ExperienceUpgradeActivity_got_it">Dohvaćeno</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Dobavljam poruku....</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Dobavljam poruku….</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Trajna greška u Signal komunikaciji!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal se nije uspješno registrirao na Google Play Services. Signal poruke i pozivi su onemogućeni, pokušajte se ponovno registrirati kroz Postavke &gt; Napredno.</string>
@@ -350,10 +350,10 @@
   <string name="GroupCreateActivity_contacts_invalid_number">Jedan od članova vaše grupe ima broj koji ne može biti ispravno pročitan. Ispravite ili uklonite taj kontakt i pokušajte ponovno.</string>
   <string name="GroupCreateActivity_avatar_content_description">Grupni avatar</string>
   <string name="GroupCreateActivity_menu_apply_button">Primjeni</string>
-  <string name="GroupCreateActivity_creating_group">Stvaranje %1$s...</string>
-  <string name="GroupCreateActivity_updating_group">Ažuriranje %1$s...</string>
+  <string name="GroupCreateActivity_creating_group">Stvaranje %1$s…</string>
+  <string name="GroupCreateActivity_updating_group">Ažuriranje %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Nije moguće dodati %1$s jer nisu Signal korisnici.</string>
-  <string name="GroupCreateActivity_loading_group_details">Učitavanje detalja grupe...</string>
+  <string name="GroupCreateActivity_loading_group_details">Učitavanje detalja grupe…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Već ste u grupi.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Podijelite svoje ime i profilnu sliku s ovom grupom?</string>
@@ -370,7 +370,7 @@
   <string name="InviteActivity_share">Dijeli</string>
   <string name="InviteActivity_choose_contacts">Odaberite kontakte</string>
   <string name="InviteActivity_cancel">Odustani</string>
-  <string name="InviteActivity_sending">Slanje...</string>
+  <string name="InviteActivity_sending">Slanje…</string>
   <string name="InviteActivity_heart_content_description">Srce</string>
   <string name="InviteActivity_invitations_sent">Pozivnice poslane!</string>
   <string name="InviteActivity_invite_to_signal">Pozovi u Signal</string>
@@ -388,7 +388,7 @@
   <string name="InviteActivity_no_app_to_share_to">Izgleda da nemate aplikacije s kojima je moguće dijeljenje.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Prijatelji paze da se njihovi prijatelji kriptirano dopisuju.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Radim u pozadini...</string>
+  <string name="Job_working_in_the_background">Radim u pozadini…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Neuspješno slanje</string>
   <string name="MessageDetailsRecipient_new_safety_number">Novi sigurnosni broj</string>
@@ -414,10 +414,10 @@
     <item quantity="other">Broj poruka koji će biti trajno izbrisan: %1$d</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Brisanje</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Brisanje poruka...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Brisanje poruka…</string>
   <string name="MediaOverviewActivity_Documents">Dokumenti</string>
   <string name="MediaOverviewActivity_Select_all">Odaberi sve</string>
-  <string name="MediaOverviewActivity_collecting_attachments">Prikupljanje privitaka...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Prikupljanje privitaka…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal poziv u tijeku</string>
   <string name="NotificationBarManager__establishing_signal_call">Uspostavljanje Signal poziva</string>
@@ -435,7 +435,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Dodirni za odabir slike profila</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Dodaj opis...</string>
+  <string name="MediaSendActivity_add_a_caption">Dodaj opis…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Stavka je uklonjena jer je prošla limit veličine</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera nije dostupna</string>
   <string name="MediaSendActivity_message_to_s">Poruka za %s</string>
@@ -486,7 +486,7 @@
         \n• Pošaljite poruke u svoje ime
     </string>
   <string name="DeviceProvisioningActivity_content_progress_title">Povezivanje uređaja</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Povezivanje novog uređaja...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Povezivanje novog uređaja…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Uređaj odobren!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Uređaj nije pronađen.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Mrežna greška.</string>
@@ -678,7 +678,7 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Vaš kontakt koristi stariju Signal inačicu. Zamolite ih da ažuriraju Signal prije provjere sigurnosnog broja.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Vaš kontakt koristi noviju Signal inačicu s nekompatibilnim QR kod oblikom. Ažurirajte vašu inačicu kako biste usporedili.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Skenirani QR kod nije ispravno oblikovan sigurnosni broj za provjeru. Pokušajte ponovno skenirati broj.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Podijelite sigurnosni broj putem...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Podijelite sigurnosni broj putem…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Naš Signal sigurnosni broj:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Izgleda da nemate aplikacije s kojima je moguće dijeljenje.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Sigurnosni broj za usporedbu nije pronađen u međuspremniku</string>
@@ -810,7 +810,7 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Nema kontakata.</string>
-  <string name="contact_selection_group_activity__finding_contacts">Učitavanje kontakata...</string>
+  <string name="contact_selection_group_activity__finding_contacts">Učitavanje kontakata…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">Slika kontakta</string>
   <!--ContactSelectionListFragment-->
@@ -862,7 +862,7 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Kliži do dna</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Učitavanje zemalja...</string>
+  <string name="country_selection_fragment__loading_countries">Učitavanje zemalja…</string>
   <string name="country_selection_fragment__search">Traži</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Skenirajte na uređaju prikazani QR kôd za povezivanje</string>
@@ -937,8 +937,8 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <string name="log_submit_activity__button_got_it">Dohvaćeno</string>
   <string name="log_submit_activity__button_compose_email">Sastavi email</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Ovaj zapis će biti javno objavljen na mreži da bi suradnici mogli pogledati, možete ga pregledati i urediti prije slanja.</string>
-  <string name="log_submit_activity__loading_logs">Učitavanje zapisa...</string>
-  <string name="log_submit_activity__uploading_logs">Prijenos zapisa...</string>
+  <string name="log_submit_activity__loading_logs">Učitavanje zapisa…</string>
+  <string name="log_submit_activity__uploading_logs">Prijenos zapisa…</string>
   <string name="log_submit_activity__success">Uspješno!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Kopirajte ovaj URL i dodajte ga u svoju izvještajnu prijavu ili email podršku:\n\n<b>%1$s</b>\n</string>
   <string name="log_submit_activity__copied_to_clipboard">Kopirano u međuspremnik</string>
@@ -965,7 +965,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">PRIKAZ</string>
   <string name="message_recipients_list_item__resend">PONOVNO POŠALJI</string>
-  <string name="message_recipients_list_item__resending">Ponovno slanje...</string>
+  <string name="message_recipients_list_item__resending">Ponovno slanje…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s se pridružio grupi.</item>
@@ -1018,7 +1018,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Ukoliko želite provjeriti sigurnost vašeg kriptiranja s%s, usporedite brojeve koje vidite iznad s brojevima na drugom uređaju. Ili možete skenirati kod s drugog telefona ili drugog zamoliti da skenira kod s vašeg telefona. <a href="https://signal.org/redirect/safety-numbers">Saznajte više.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Pritisnite za skeniranje</string>
-  <string name="verify_display_fragment__loading">Učitavanje...</string>
+  <string name="verify_display_fragment__loading">Učitavanje…</string>
   <string name="verify_display_fragment__verified">Provjereno</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Podijeli sigurnosni broj</string>
@@ -1189,7 +1189,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Nova poruka za...</string>
+  <string name="contact_selection_list__unknown_contact">Nova poruka za…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Nazovi</string>
   <!--conversation_callable_secure-->
@@ -1291,12 +1291,12 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Brisanje</string>
-  <string name="trimmer__deleting_old_messages">Brisanje starih poruka...</string>
+  <string name="trimmer__deleting_old_messages">Brisanje starih poruka…</string>
   <string name="trimmer__old_messages_successfully_deleted">Stare poruke su uspješno obrisane</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona transporta</string>
-  <string name="ConversationListFragment_loading">Učitavanje...</string>
-  <string name="CallNotificationBuilder_connecting">Povezivanje...</string>
+  <string name="ConversationListFragment_loading">Učitavanje…</string>
+  <string name="CallNotificationBuilder_connecting">Povezivanje…</string>
   <string name="Permissions_permission_required">Potrebna je dozvola</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal zahtijeva dozvolu pristupa SMS porukama da može sam slati SMS poruke, ali pristup biva odbijen. Molim otvorite opcije aplikacije, odaberite \"Dozvole\" i uključite \"SMS\".</string>
   <string name="Permissions_continue">Nastavi</string>
@@ -1321,8 +1321,8 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="RegistrationActivity_restore">Vrati</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Nije moguće učitati sigurnosne kopije iz novijih verzija Signal-a</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Netočna lozinka za sigurnosnu kopiju</string>
-  <string name="RegistrationActivity_checking">Provjera...</string>
-  <string name="RegistrationActivity_d_messages_so_far">%d poruka dosad...</string>
+  <string name="RegistrationActivity_checking">Provjera…</string>
+  <string name="RegistrationActivity_d_messages_so_far">%d poruka dosad…</string>
   <string name="RegistrationActivity_restore_from_backup">Vrati iz sigurnosne kopije?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Vratite poruke i medije iz lokalne sigurnosne kopije. Ako ne obnovite sada, kasnije nećete moći vratiti.</string>
   <string name="RegistrationActivity_backup_size_s">Veličina sigurnosne kopije: %s</string>
@@ -1337,7 +1337,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal zahtjeva pristup vanjskoj pohrani kako bi se omogućilo spremanje sigurnosnih kopija, no to je trajno odbijeno. Molimo nastavite do opcija aplikacije, odaberite \"Dozvole\", i uključite \"Pohrana\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Zadnja sigurnosna kopija: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">U toku</string>
-  <string name="LocalBackupJob_creating_backup">Stvaranje sigurnosne kopije...</string>
+  <string name="LocalBackupJob_creating_backup">Stvaranje sigurnosne kopije…</string>
   <string name="ProgressPreference_d_messages_so_far">%d poruka dosad</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Unesite kod koji smo poslali na %s.</string>
   <string name="RegistrationActivity_wrong_number">Nevažeći broj</string>
