--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -28,7 +28,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Signalとメッセージ通知のロックを無効にします</string>
   <string name="ApplicationPreferencesActivity_disable">無効</string>
   <string name="ApplicationPreferencesActivity_unregistering">登録取り消し</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Signalの登録を解除します...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Signalの登録を解除します…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Signalでのメッセージ・通話を無効にしますか？</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">サーバーから登録を取消します。Signalを使ったメッセージのやり取りや通話はできなくなります。 再びSignalを使うためには、あなたの電話番号を再登録をする必要があります。</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">サーバー接続中にエラーが発生しました！</string>
@@ -60,8 +60,8 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signalで位置情報を添付するには、位置情報へのアクセスを許可する必要がありますが、無効になっています。アプリ設定メニューから、『アプリの権限』を選び、『位置情報』へのアクセス許可を有効にしてください。</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signalで写真を撮るには、カメラへのアクセスを許可する必要がありますが、無効になっています。アプリ設定メニューから、『アプリの権限』を選び、『カメラ』へのアクセス許可を有効にしてください。</string>
   <!--AttachmentUploadJob-->
-  <string name="AttachmentUploadJob_uploading_media">アップロード中...</string>
-  <string name="AttachmentUploadJob_compressing_video_start">動画を圧縮中...</string>
+  <string name="AttachmentUploadJob_uploading_media">アップロード中…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">動画を圧縮中…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">音声再生中にエラーがありました！</string>
   <!--BlockedContactsActivity-->
@@ -208,14 +208,14 @@
     <item quantity="other">%1$d個の添付ファイルを保存</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="other">%1$d個の添付ファイルを外部メモリに保存...</item>
+    <item quantity="other">%1$d個の添付ファイルを外部メモリに保存…</item>
   </plurals>
-  <string name="ConversationFragment_pending">保留中...</string>
+  <string name="ConversationFragment_pending">保留中…</string>
   <string name="ConversationFragment_push">データ (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">削除中</string>
-  <string name="ConversationFragment_deleting_messages">メッセージを削除しています...</string>
+  <string name="ConversationFragment_deleting_messages">メッセージを削除しています…</string>
   <string name="ConversationFragment_quoted_message_not_found">元のメッセージが見つかりません</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">元のメッセージはすでに削除されています</string>
   <string name="ConversationFragment_failed_to_open_message">メッセージの開封に失敗しました</string>
@@ -232,7 +232,7 @@
     <item quantity="other">選択した%1$d個の会話が完全に削除されます。</item>
   </plurals>
   <string name="ConversationListFragment_deleting">削除</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">選択した会話を削除しています...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">選択した会話を削除しています…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="other">%d件の会話をアーカイブしました</item>
   </plurals>
@@ -275,7 +275,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">このデバイスを切り離すとメッセージの送受信ができなくなります。</string>
   <string name="DeviceListActivity_network_connection_failed">ネットワーク接続に失敗</string>
   <string name="DeviceListActivity_try_again">再試行</string>
-  <string name="DeviceListActivity_unlinking_device">デバイスを切り離す...</string>
+  <string name="DeviceListActivity_unlinking_device">デバイスを切り離す…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">デバイスを切り離す</string>
   <string name="DeviceListActivity_network_failed">ネットワークエラー！</string>
   <!--DeviceListItem-->
@@ -315,7 +315,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">この機能は、Signalの設定（プライバシー &gt; リンクプレビューを送る）で有効化できます。</string>
   <string name="ExperienceUpgradeActivity_got_it">分かりました</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">メッセージを読み込んでいます...</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">メッセージを読み込んでいます…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">永続的なSignal通信のエラー！</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Google PlayサービスにSignalを登録できなかったため、Signalのメッセージと通話は無効になっています。設定 &gt; 詳細設定で再登録を試してください。</string>
@@ -335,10 +335,10 @@
   <string name="GroupCreateActivity_contacts_invalid_number">グループのメンバーで電話番号が正しくない人がいます。番号を修正するか、そのメンバーを削除してからやり直してください。</string>
   <string name="GroupCreateActivity_avatar_content_description">グループアバター</string>
   <string name="GroupCreateActivity_menu_apply_button">適用する</string>
-  <string name="GroupCreateActivity_creating_group">%1$sを作成中...</string>
-  <string name="GroupCreateActivity_updating_group">%1$sをアップデート中...</string>
+  <string name="GroupCreateActivity_creating_group">%1$sを作成中…</string>
+  <string name="GroupCreateActivity_updating_group">%1$sをアップデート中…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Signalユーザーでないので%1$sを加えることはできません</string>
-  <string name="GroupCreateActivity_loading_group_details">グループ詳細を読み込み...</string>
+  <string name="GroupCreateActivity_loading_group_details">グループ詳細を読み込み…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">グループに加入済みです</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">このグループにプロフィール情報を公開しますか？</string>
@@ -369,7 +369,7 @@
   <string name="InviteActivity_no_app_to_share_to">シェアするためのアプリがないようです。</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">友達とのチャットを暗号化しましょう。</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">バックグラウンドで処理しています...</string>
+  <string name="Job_working_in_the_background">バックグラウンドで処理しています…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">送信失敗</string>
   <string name="MessageDetailsRecipient_new_safety_number">新しい安全番号</string>
@@ -391,10 +391,10 @@
     <item quantity="other">選択した%1$d件のメッセージを完全に削除します。</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">削除中</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">メッセージを削除中...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">メッセージを削除中…</string>
   <string name="MediaOverviewActivity_Documents">ドキュメント</string>
   <string name="MediaOverviewActivity_Select_all">すべて選択</string>
-  <string name="MediaOverviewActivity_collecting_attachments">添付ファイルを集めています...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">添付ファイルを集めています…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal通話中</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal通話を準備しています</string>
@@ -413,7 +413,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">タップで選択</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">キャプション追加...</string>
+  <string name="MediaSendActivity_add_a_caption">キャプション追加…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">サイズの上限を超えたため、項目が削除されました。</string>
   <string name="MediaSendActivity_camera_unavailable">カメラは利用できません。</string>
   <string name="MediaSendActivity_message_to_s">%s へメッセージ</string>
@@ -461,7 +461,7 @@
 ・自分のメッセージを読む
 \n・自分の名前でメッセージを送る</string>
   <string name="DeviceProvisioningActivity_content_progress_title">端末を追加中</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">新しい端末を追加中...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">新しい端末を追加中…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">端末の認証完了</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">端末がありません</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">ネットワークエラー</string>
@@ -649,7 +649,7 @@
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">連絡先の相手は古いSignalを使っています。Signalをアップデートしてから安全番号の検証を行うようお願いしてください。</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">相手がより新しいバージョンのSignalを使ってるため，QRコードの形式が異なります。Signalをアップデートしてから改めて比較してください。</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">読み取ったQRコードは、適正な安全番号認証コードではありません。もう一度読み取って下さい。</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">次の方法で安全番号を共有...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">次の方法で安全番号を共有…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">私たちの安全番号:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">シェアするためのアプリがないようです。</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">クリップボードで安全番号が見つかりませんでした</string>
@@ -826,7 +826,7 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">連絡先の写真</string>
   <!--audio_view-->
-  <string name="audio_view__play_pause_accessibility_description">再生 ... 停止</string>
+  <string name="audio_view__play_pause_accessibility_description">再生 … 停止</string>
   <string name="audio_view__download_accessibility_description">ダウンロード</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">音声</string>
@@ -840,7 +840,7 @@
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">最後までスクロール</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">国名を読み込み中...</string>
+  <string name="country_selection_fragment__loading_countries">国名を読み込み中…</string>
   <string name="country_selection_fragment__search">検索</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">追加する端末に表示されているQRコードをスキャンする</string>
@@ -930,7 +930,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">見る</string>
   <string name="message_recipients_list_item__resend">再送</string>
-  <string name="message_recipients_list_item__resending">再送中...</string>
+  <string name="message_recipients_list_item__resending">再送中…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="other">%1$sがグループに加わりました</item>
@@ -981,7 +981,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[%sに対する暗号化を検証したい場合は、上記の番号が相手端末上の番号と一致するか確認してください。あるいは相手の端末上のQRコードを読み取るか、こちらのQRコードを相手に読み取ってもらうこともできます。<a href="https://signal.org/redirect/safety-numbers">詳細</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">タップしてスキャンする</string>
-  <string name="verify_display_fragment__loading">取得中...</string>
+  <string name="verify_display_fragment__loading">取得中…</string>
   <string name="verify_display_fragment__verified">検証済み</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">安全番号を共有する</string>
@@ -1258,12 +1258,12 @@
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">削除中</string>
-  <string name="trimmer__deleting_old_messages">古いメッセージを削除しています...</string>
+  <string name="trimmer__deleting_old_messages">古いメッセージを削除しています…</string>
   <string name="trimmer__old_messages_successfully_deleted">古いメッセージを削除しました</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">転送アイコン</string>
-  <string name="ConversationListFragment_loading">読込中...</string>
-  <string name="CallNotificationBuilder_connecting">接続中...</string>
+  <string name="ConversationListFragment_loading">読込中…</string>
+  <string name="CallNotificationBuilder_connecting">接続中…</string>
   <string name="Permissions_permission_required">アクセス許可が必要です</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">SignalでSMSを送信するには、SMSへのアクセスを許可する必要がありますが、無効になっています。アプリ設定メニューから、『アプリの権限』を選び、『SMS』へのアクセス許可を有効にしてください。</string>
   <string name="Permissions_continue">続行</string>
@@ -1304,7 +1304,7 @@
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signalはバックアップの作成のために外部ストレージへの許可が必要です。アプリの設定から「権限」を選択し、「ストレージ」を有効にしてください。</string>
   <string name="ChatsPreferenceFragment_last_backup_s">最終バックアップ: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">実施中</string>
-  <string name="LocalBackupJob_creating_backup">バックアップを作成しています...</string>
+  <string name="LocalBackupJob_creating_backup">バックアップを作成しています…</string>
   <string name="ProgressPreference_d_messages_so_far">今、%d個メッセージ</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">%sに送った検証コードを入力してください。</string>
   <string name="RegistrationActivity_wrong_number">番号が違います</string>
