--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">មែន</string>
   <string name="no">ទេ</string>
   <string name="delete">លុប</string>
-  <string name="please_wait">សូមរង់ចាំ...</string>
+  <string name="please_wait">សូមរង់ចាំ…</string>
   <string name="save">រក្សាទុក</string>
   <string name="note_to_self">កំណត់ចំណាំខ្លួនឯង</string>
   <!--AbstractNotificationBuilder-->
@@ -12,7 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationMigrationActivity-->
-  <string name="ApplicationMigrationActivity__signal_is_updating">Signal កំពុងធ្វើបច្ចុប្បន្នភាព...</string>
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal កំពុងធ្វើបច្ចុប្បន្នភាព…</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">ពេលនេះ %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">អ្នកមិនទាន់បានកំណត់ឃ្លាសម្ងាត់ទេ!</string>
@@ -60,8 +60,8 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signalត្រូវការសិទ្ធិប្រើប្រាស់ទីតាំងដើម្បីភ្ជាប់ទីតាំង ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅការកំណត់ជ្រើសរើស \"អនុញ្ញាត\" និងបើក \"ទីតាំង\" ។</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signalត្រូវការសិទ្ធិប្រើប្រាស់កាមេរ៉ាដើម្បីថតរូប ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅការកំណត់ ជ្រើសរើស \"អនុញ្ញាត\" និងបើក \"កាមេរ៉ា\"។</string>
   <!--AttachmentUploadJob-->
-  <string name="AttachmentUploadJob_uploading_media">កំពុងបញ្ជូនមេឌៀ...</string>
-  <string name="AttachmentUploadJob_compressing_video_start">កំពុងពង្រួមវីដេអូ...</string>
+  <string name="AttachmentUploadJob_uploading_media">កំពុងបញ្ជូនមេឌៀ…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">កំពុងពង្រួមវីដេអូ…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">បញ្ហាការចាក់សំឡេង!</string>
   <!--BlockedContactsActivity-->
@@ -208,14 +208,14 @@
     <item quantity="other">កំពុងរក្សា %1$d ឯកសារភ្ជាប់</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="other">កំពុងរក្សា %1$d ឯកសារភ្ជាប់ទៅកាន់ថាសផ្ទុក...</item>
+    <item quantity="other">កំពុងរក្សា %1$d ឯកសារភ្ជាប់ទៅកាន់ថាសផ្ទុក…</item>
   </plurals>
-  <string name="ConversationFragment_pending">មិនទាន់សម្រេច...</string>
+  <string name="ConversationFragment_pending">មិនទាន់សម្រេច…</string>
   <string name="ConversationFragment_push">ទិន្នន័យ (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">កំពុងលុប</string>
-  <string name="ConversationFragment_deleting_messages">កំពុងលុបសារ...</string>
+  <string name="ConversationFragment_deleting_messages">កំពុងលុបសារ…</string>
   <string name="ConversationFragment_quoted_message_not_found">រកមិនឃើញសារដើម</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">សារដើមលែងមានទៀតហើយ</string>
   <string name="ConversationFragment_failed_to_open_message">បរាជ័យក្នុងការបើកសារ</string>
@@ -232,7 +232,7 @@
     <item quantity="other">នេះនឹងលុបការសន្ទនា %1$d ដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៏។</item>
   </plurals>
   <string name="ConversationListFragment_deleting">កំពុងលុប</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">កំពុងលុបការសន្ទនាដែលបានជ្រើសរើស...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">កំពុងលុបការសន្ទនាដែលបានជ្រើសរើស…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="other">%d សន្ទនារក្សាទុកក្នុងបណ្ណាសារ</item>
   </plurals>
@@ -275,7 +275,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">ពេលផ្តាច់តំណភ្ជាប់ឧបករណ៍នេះ អ្នកនឹងមិនអាចផ្ញើ និងទទួលសារទៀតទេ។ </string>
   <string name="DeviceListActivity_network_connection_failed">ការតភ្ជាប់បណ្តាញបរាជ័យ</string>
   <string name="DeviceListActivity_try_again">ព្យាយាមម្តងទៀត</string>
-  <string name="DeviceListActivity_unlinking_device">កំពុងផ្តាច់ឧបករណ៍...</string>
+  <string name="DeviceListActivity_unlinking_device">កំពុងផ្តាច់ឧបករណ៍…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">កំពុងផ្តាច់ឧបករណ៍</string>
   <string name="DeviceListActivity_network_failed">បណ្តាញបរាជ័យ!</string>
   <!--DeviceListItem-->
@@ -315,7 +315,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">អ្នកអាច បិទ ឬ បើក មុខងារនេះបានគ្រប់ពេល ក្នុងការកំណត់របស់កម្មវិធី Signal របស់អ្នក (ឯកជនភាព &gt; ការមើលការផ្ញើតំណភ្ជាប់)។</string>
   <string name="ExperienceUpgradeActivity_got_it">ទទួលបាន</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">សារកំពុងទៅដល់...</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">សារកំពុងទៅដល់…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">ការបរាជ័យក្នុងការទំនាក់ទំនង Signal អចិន្រ្តៃយ៍!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal មិនអាចចុះឈ្មោះជាមួយ Google Play Services។ ការផ្ញើសារ​ និងការហៅចេញSignal ត្រូវបានបិទ សូមព្យាយាមចុះឈ្មោះសារជាថ្មីក្នុង ការកំណត់ &gt; កម្រិតខ្ពស់។</string>
@@ -336,9 +336,9 @@
   <string name="GroupCreateActivity_avatar_content_description">រូបតំណាងក្រុម</string>
   <string name="GroupCreateActivity_menu_apply_button">អនុវត្ត</string>
   <string name="GroupCreateActivity_creating_group">កំពុងបង្កើត %1$s…</string>
-  <string name="GroupCreateActivity_updating_group">កំពុងធ្វើបច្ចុប្បន្នភាព %1$s...</string>
+  <string name="GroupCreateActivity_updating_group">កំពុងធ្វើបច្ចុប្បន្នភាព %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">មិនអាចបន្ថែម %1$s ព្រោះពួកគេមិនមែនជា អ្នកប្រើប្រាស់Signal ។</string>
-  <string name="GroupCreateActivity_loading_group_details">កំពុងបើកព័ត៌មានក្រុម...</string>
+  <string name="GroupCreateActivity_loading_group_details">កំពុងបើកព័ត៌មានក្រុម…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">អ្នកនៅក្នុងក្រុមហើយ។</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">ចែករំលែកឈ្មោះប្រវត្តិរូប និងរូបថតរបស់អ្នកជាមួយនឹងក្រុមនេះ?</string>
@@ -355,7 +355,7 @@
   <string name="InviteActivity_share">ចែករំលែក</string>
   <string name="InviteActivity_choose_contacts">ជ្រើសរើសលេខទំនាក់ទំនង</string>
   <string name="InviteActivity_cancel">បោះបង់</string>
-  <string name="InviteActivity_sending">កំពុងផ្ញើ...</string>
+  <string name="InviteActivity_sending">កំពុងផ្ញើ…</string>
   <string name="InviteActivity_heart_content_description">បេះដូង</string>
   <string name="InviteActivity_invitations_sent">លិខិតអញ្ជើញបានផ្ញើ!</string>
   <string name="InviteActivity_invite_to_signal">អញ្ជើញចូលប្រើSignal</string>
@@ -369,7 +369,7 @@
   <string name="InviteActivity_no_app_to_share_to">វាហាក់ដូចជាមិនមានកម្មវិធីណាមួយដើម្បីចែករំលែក។</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">មិត្តភក្តិមិនអោយមិត្តភក្តិជជែកដោយមិនកាណាល់កូដសម្ងាត់។</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">កំពុងដំណើរការសកម្មភាពខាងក្នុង...</string>
+  <string name="Job_working_in_the_background">កំពុងដំណើរការសកម្មភាពខាងក្នុង…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">ផ្ញើបរាជ័យ</string>
   <string name="MessageDetailsRecipient_new_safety_number">លេខសុវត្ថិភាពថ្មី</string>
@@ -391,10 +391,10 @@
     <item quantity="other">វានឹងលុបសារ %1$d ដែលបានជ្រើសរើសទាំងអស់ជារៀងរហូត។</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">កំពុងលុប</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">កំពុងលុបសារ...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">កំពុងលុបសារ…</string>
   <string name="MediaOverviewActivity_Documents">ឯកសារ</string>
   <string name="MediaOverviewActivity_Select_all">ជ្រើសរើសទាំងអស់</string>
-  <string name="MediaOverviewActivity_collecting_attachments">កំពុងប្រមូលឯកសារភ្ជាប់...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">កំពុងប្រមូលឯកសារភ្ជាប់…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">ការហៅចេញSignal កំពុងដំណើរការ</string>
   <string name="NotificationBarManager__establishing_signal_call">ការហៅចេញ តាមSignal</string>
@@ -413,7 +413,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">ចុចដើម្បីជ្រើសរើស</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">ដាក់ចំណងជើង...</string>
+  <string name="MediaSendActivity_add_a_caption">ដាក់ចំណងជើង…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">ចំណុចមួយត្រូវបានលុបចេញព្រោះវាលើសពីទំហំកំណត់</string>
   <string name="MediaSendActivity_camera_unavailable">កាមេរ៉ាមិនដំណើរការ</string>
   <string name="MediaSendActivity_message_to_s">សារទៅកាន់ %s</string>
@@ -654,7 +654,7 @@
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">លេខទំនាក់ទំនងអ្នក កំពុងប្រើប្រាស់នៅលើSignal ជំនាន់ចាស់។ សូមប្រាប់គេឲ្យធ្វើបច្ចុប្បន្នភាពកម្មវិធី មុនពេលផ្ទៀងផ្ទាត់លេខសុវត្ថិភាព។ </string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">លេខទំនាក់ទំនងអ្នក កំពុងប្រើប្រាស់ Signalកំណែថ្មីជាង ជាមួយទម្រង់QRកូដ ដែលមិនត្រូវគ្នា។ សូមធ្វើបច្ចុប្បន្នភាព ដើម្បីប្រៀបធៀប។ </string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">កូដQR ដែលស្កែន គឺមិនត្រូវតាមទម្រង់លេខកូដផ្ទៀងផ្ទាត់សុវត្ថិភាពទេ។ សូមព្យាយាមស្កែនម្តងទៀត។</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">ចែករំលែកលេខសុវត្ថិភាពតាម...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">ចែករំលែកលេខសុវត្ថិភាពតាម…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">លេខសុវត្ថិភាព Signalរបស់យើង៖</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">អ្នកហាក់ដូចជាមិនមានកម្មវិធីណាមួយដើម្បីចែករំលែក។</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">ពុំមានលេខសុវត្ថិភាព ដើម្បីប្រៀបធៀបក្នុង clipboard</string>
@@ -792,7 +792,7 @@
   <string name="contact_filter_toolbar__show_dial_pad_description">បង្ហាញក្តារចុចលេខ</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">គ្មានបញ្ជីលេខទំនាក់ទំនង។</string>
-  <string name="contact_selection_group_activity__finding_contacts">កំពុងផ្ទុកបញ្ជីទំនាក់ទំនង...</string>
+  <string name="contact_selection_group_activity__finding_contacts">កំពុងផ្ទុកបញ្ជីទំនាក់ទំនង…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">រូបភាពទំនាក់ទំនង</string>
   <!--ContactSelectionListFragment-->
@@ -831,7 +831,7 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">រូបភាពទំនាក់ទំនង</string>
   <!--audio_view-->
-  <string name="audio_view__play_pause_accessibility_description">លេង ... ផ្អាក</string>
+  <string name="audio_view__play_pause_accessibility_description">លេង … ផ្អាក</string>
   <string name="audio_view__download_accessibility_description">ទាញយក</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">សំឡេង</string>
@@ -845,7 +845,7 @@
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">អូសចុះក្រោម</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">កំពុងផ្ទុកប្រទេស...</string>
+  <string name="country_selection_fragment__loading_countries">កំពុងផ្ទុកប្រទេស…</string>
   <string name="country_selection_fragment__search">ស្វែងរក</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">ស្កែនកូដQR ដែលបានបង្ហាញលើឧបករណ៍ដើម្បីភ្ជាប់</string>
@@ -908,8 +908,8 @@
   <string name="log_submit_activity__button_got_it">ទទួលបាន</string>
   <string name="log_submit_activity__button_compose_email">បង្កើតសារថ្មី</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">កំណត់ត្រានេះនឹងត្រូវបិតផ្សាយជាសាធារណៈតាមអនឡាញ សម្រាប់អ្នកចូលរួម ដើម្បីបង្ហើញ អ្នកអាចត្រួតពិនិត្យ និងកែប្រែ មុនពេលដាក់បញ្ជូន។</string>
-  <string name="log_submit_activity__loading_logs">កំពុងផ្ទុកកំណត់ត្រា...</string>
-  <string name="log_submit_activity__uploading_logs">កំពុងបញ្ជូនកំណត់ត្រា...</string>
+  <string name="log_submit_activity__loading_logs">កំពុងផ្ទុកកំណត់ត្រា…</string>
+  <string name="log_submit_activity__uploading_logs">កំពុងបញ្ជូនកំណត់ត្រា…</string>
   <string name="log_submit_activity__success">ជោគជ័យ!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">ចម្លងតំណ URL នេះ និងបន្ថែមវាទៅក្នុងរបាយការណ៍បញ្ហារបស់អ្នក ឬអ៊ីមែលជំនួយ:\n\n<b>%1$s</b>\n</string>
   <string name="log_submit_activity__copied_to_clipboard">បានចម្លងទៅ clipboard</string>
@@ -935,7 +935,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">មើល</string>
   <string name="message_recipients_list_item__resend">ផ្ញើឡើងវិញ</string>
-  <string name="message_recipients_list_item__resending">កំពុងផ្ញើឡើងវិញ...</string>
+  <string name="message_recipients_list_item__resending">កំពុងផ្ញើឡើងវិញ…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="other">%1$s ចូលក្រុម។</item>
@@ -986,7 +986,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[បើអ្នកចង់ផ្ទៀងផ្ទាត់សុវត្ថិភាពកូដនីយកម្មរបស់អ្នកជាមួយ %s ប្រៀបធៀបលេខខាងលើជាមួយលេខនៅលើឧបករណ៍របស់ពួកគេ។ ផ្សេងពីនេះទៀត អ្នកអាចស្កេនកូដលើទូរស័ព្ទរបស់ពួកគេ ឬសុំពួកគេឲ្យស្កេនកូដលើទូរស័ព្ទរបស់អ្នក។ <a href="https://signal.org/redirect/safety-numbers">ស្វែងយល់បន្ថែម</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">ចុច ដើម្បីស្កែន</string>
-  <string name="verify_display_fragment__loading">កំពុងផ្ទុក...</string>
+  <string name="verify_display_fragment__loading">កំពុងផ្ទុក…</string>
   <string name="verify_display_fragment__verified">បានផ្ទៀងផ្ទាត់</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">ចែករំលែកលេខសុវត្ថិភាព</string>
@@ -1161,7 +1161,7 @@
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">ផ្ញើសារថ្មីទៅកាន់...</string>
+  <string name="contact_selection_list__unknown_contact">ផ្ញើសារថ្មីទៅកាន់…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">ហៅចេញ</string>
   <!--conversation_callable_secure-->
@@ -1263,12 +1263,12 @@
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">កំពុងលុប</string>
-  <string name="trimmer__deleting_old_messages">កំពុងលុបសារចាស់ៗ...</string>
+  <string name="trimmer__deleting_old_messages">កំពុងលុបសារចាស់ៗ…</string>
   <string name="trimmer__old_messages_successfully_deleted">សារចាស់ៗត្រូវបានលុបចេញដោយជោគជ័យ</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">រូបសញ្ញាជញ្ជូន</string>
-  <string name="ConversationListFragment_loading">កំពុងផ្ទុក...</string>
-  <string name="CallNotificationBuilder_connecting">កំពុងភ្ជាប់...</string>
+  <string name="ConversationListFragment_loading">កំពុងផ្ទុក…</string>
+  <string name="CallNotificationBuilder_connecting">កំពុងភ្ជាប់…</string>
   <string name="Permissions_permission_required">ទាមទារការអនុញ្ញាត</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signalត្រូវការសិទ្ធិប្រើប្រាស់សារ SMS ដើម្បីផ្ញើសារ SMS ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅកាន់ ការកំណត់ ជ្រើសរើស \"ការអនុញ្ញាត\" និងបើក \"សារ SMS\"។</string>
   <string name="Permissions_continue">បន្ត</string>
@@ -1293,8 +1293,8 @@
   <string name="RegistrationActivity_restore">ស្តារឡើងវិញ</string>
   <string name="RegistrationActivity_backup_failure_downgrade">មិនអាចនាំចូលឯកសារបម្រុងទុក ពី Signal ជំនាន់ថ្មី</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">ឃ្លាសម្ងាត់បម្រុងទុកមិនត្រឹមត្រូវ</string>
-  <string name="RegistrationActivity_checking">កំពុងត្រួតពិនិត្យ...</string>
-  <string name="RegistrationActivity_d_messages_so_far">%d សារ ឥឡូវនេះ...</string>
+  <string name="RegistrationActivity_checking">កំពុងត្រួតពិនិត្យ…</string>
+  <string name="RegistrationActivity_d_messages_so_far">%d សារ ឥឡូវនេះ…</string>
   <string name="RegistrationActivity_restore_from_backup">ស្តារចេញពីការបម្រុងទុក?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">ស្តារឡើងវិញសាររបស់អ្នក និងមេឌាចេញពីការបម្រុងទុកខាងក្នុង។ បើអ្នកមិនស្តារឡើងវិញឥលូវទេ អ្នកនឹងមិនអាចស្តារឡើងវិញបានទេនៅពេលក្រោយ។</string>
   <string name="RegistrationActivity_backup_size_s">ទំហំបម្រុងទុក៖ %s</string>
@@ -1309,7 +1309,7 @@
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signalត្រូវការសិទ្ធិប្រើប្រាស់អង្គរក្សាទុកខាងក្រៅដើម្បីបង្កើតការស្តារឡើងវិញ ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅកាន់ ការកំណត់ ជ្រើសរើស \"ការអនុញ្ញាត\" និងបើក \"អង្គរក្សាទុក\"។ </string>
   <string name="ChatsPreferenceFragment_last_backup_s">បម្រុងទុកលើលចុងក្រោយ៖ %s</string>
   <string name="ChatsPreferenceFragment_in_progress">កំពុងដំណើរការ</string>
-  <string name="LocalBackupJob_creating_backup">កំពុងបង្កើតការបម្រុងទុក...</string>
+  <string name="LocalBackupJob_creating_backup">កំពុងបង្កើតការបម្រុងទុក…</string>
   <string name="ProgressPreference_d_messages_so_far">ឥឡូវនេះសារ%d</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">សូមបញ្ចូលលេខកូដផ្ទៀងផ្ទាត់ដែលបានផ្ញើទៅកាន់ %s។</string>
   <string name="RegistrationActivity_wrong_number">ខុសលេខ</string>
