--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">Erê</string>
   <string name="no">Na</string>
   <string name="delete">Jê bibe</string>
-  <string name="please_wait">Ji kerema xwe bisekine...</string>
+  <string name="please_wait">Ji kerema xwe bisekine…</string>
   <string name="save">Tomar bike</string>
   <string name="note_to_self">Bo min Nîşe</string>
   <!--AbstractNotificationBuilder-->
@@ -29,7 +29,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Ev, wê qufleya danezanên peyam û Signalê bi awayekî mayînde veke.</string>
   <string name="ApplicationPreferencesActivity_disable">Neçalak bike</string>
   <string name="ApplicationPreferencesActivity_unregistering">Tomar tê jêbirin</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Tomar ji peyam û bangên Signalê tê rakirin...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Tomar ji peyam û bangên Signalê tê rakirin…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Bila peyam û bangên Signalê neçalak bibin?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Bi rakirina tomarên ji rajekarê bang û peyamên Signalê neçalak bike. Ji bo tu di pêşerojê de dîsa bikar bîne divê hejmara telefona xwe ji nû ve tomar bike.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Di girêdana bi rajekar re çewtî rû da!</string>
@@ -194,15 +194,15 @@
     <item quantity="other">%1$d servehî tên tomarkirin</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Servehî li bîrbarê tê tomarkirin...</item>
-    <item quantity="other">%1$d servehî li bîrbarê tê tomarkirin...</item>
+    <item quantity="one">Servehî li bîrbarê tê tomarkirin…</item>
+    <item quantity="other">%1$d servehî li bîrbarê tê tomarkirin…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Hilawîstiye...</string>
+  <string name="ConversationFragment_pending">Hilawîstiye…</string>
   <string name="ConversationFragment_push">Dane (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Tê jêbirin</string>
-  <string name="ConversationFragment_deleting_messages">Peyam tên jêbirin...</string>
+  <string name="ConversationFragment_deleting_messages">Peyam tên jêbirin…</string>
   <string name="ConversationFragment_quoted_message_not_found">Peyama resen nehate dîtin</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Peyama resen êdî ne li berdest e</string>
   <!--ConversationListActivity-->
@@ -218,7 +218,7 @@
     <item quantity="other">Ev ê %1$d  gotûbêjên bijartî teva bi awayekî mayinde jê bibe.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Tê jêbirin</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Gotûbêjên bijartî tên jêbirin...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Gotûbêjên bijartî tên jêbirin…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Gotûbêj hate arşîvkirin</item>
     <item quantity="other">%d  gotûbêj hate arşîvkirin</item>
@@ -261,7 +261,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Bi rakirina girêdana ji vê amûrê ve êdî tu nikare peyam bîşîne an jî bistîne.</string>
   <string name="DeviceListActivity_network_connection_failed">Giredana torê têk çû</string>
   <string name="DeviceListActivity_try_again">Dîsa biceribîne</string>
-  <string name="DeviceListActivity_unlinking_device">Girêdana amûrê tê rakirin...</string>
+  <string name="DeviceListActivity_unlinking_device">Girêdana amûrê tê rakirin…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Rakirina girêdana amûrê</string>
   <string name="DeviceListActivity_network_failed">Tor têk çû!</string>
   <!--DeviceListItem-->
@@ -294,7 +294,7 @@
   <string name="ExperienceUpgradeActivity_no_thanks">Na, sipas</string>
   <string name="ExperienceUpgradeActivity_got_it">Temam</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">...Peyamek tê wergirtin</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">…Peyamek tê wergirtin</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Ragihandina Signalê çênabe!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signalê nekarî ligel Google Play Services ê xwe tomar bike. Peyam û bangên Signal ê hatin neçalakkirin. Ji kerema xwe di Sazkarî &gt; Pêşketî de dîsa tomarkirinê biceribîne.</string>
@@ -314,10 +314,10 @@
   <string name="GroupCreateActivity_contacts_invalid_number">Hejmara endamekî koma te nikare baş were xwendin. Vî berdengî yan rake yan serast bike û paşê dîsa biceribîne.</string>
   <string name="GroupCreateActivity_avatar_content_description">Avatara komê</string>
   <string name="GroupCreateActivity_menu_apply_button">Bisepîne</string>
-  <string name="GroupCreateActivity_creating_group">%1$s tê afirandin...</string>
-  <string name="GroupCreateActivity_updating_group">%1$s tê hildemandin...</string>
+  <string name="GroupCreateActivity_creating_group">%1$s tê afirandin…</string>
+  <string name="GroupCreateActivity_updating_group">%1$s tê hildemandin…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Nekarî %1$s tevlî bikin çimkî ew Signal ê bikar nayîne.</string>
-  <string name="GroupCreateActivity_loading_group_details">Hûrgiliyên komê tên barkirin...</string>
+  <string name="GroupCreateActivity_loading_group_details">Hûrgiliyên komê tên barkirin…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Tu jixwe di vê komê de yî.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Dixwazî nav û wêneyê xwe bi vê komê re parve bikî?</string>
@@ -333,7 +333,7 @@
   <string name="InviteActivity_share">Parve bike</string>
   <string name="InviteActivity_choose_contacts">Berdengan bibijêre</string>
   <string name="InviteActivity_cancel">Betal</string>
-  <string name="InviteActivity_sending">Tê şandin...</string>
+  <string name="InviteActivity_sending">Tê şandin…</string>
   <string name="InviteActivity_heart_content_description">Dil</string>
   <string name="InviteActivity_invitations_sent">Vexwendin hatin şandin!</string>
   <string name="InviteActivity_invite_to_signal">Vexwîne Signalê</string>
@@ -349,7 +349,7 @@
   <string name="InviteActivity_no_app_to_share_to">Xuya ye ji bo parvekirinê hîç sepanê te nîn in.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Heval nahêlin hevalên wan neşîfrekirî gotûbêj bikin.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Di paşrû de tê xebitîn...</string>
+  <string name="Job_working_in_the_background">Di paşrû de tê xebitîn…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Nekarî bê şandin</string>
   <string name="MessageDetailsRecipient_new_safety_number">Hejmara ewlehiya nû</string>
@@ -373,10 +373,10 @@
     <item quantity="other">Dê bi vê rêyê hemû %1$d peyamên bijartî ji binî bên jêbirin.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Jêbirin</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Peyam tên jêbirin...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Peyam tên jêbirin…</string>
   <string name="MediaOverviewActivity_Documents">Pelge</string>
   <string name="MediaOverviewActivity_Select_all">Gişan bibijêre</string>
-  <string name="MediaOverviewActivity_collecting_attachments">...Servehî tên berhevkirin</string>
+  <string name="MediaOverviewActivity_collecting_attachments">…Servehî tên berhevkirin</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Banga Signalê tê pêkanîn</string>
   <string name="NotificationBarManager__establishing_signal_call">Banga Signalê tê amadekirin</string>
@@ -432,7 +432,7 @@
         \n• Bi navê xwe peyam bişîne
     </string>
   <string name="DeviceProvisioningActivity_content_progress_title">Amûr tê girêdan</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Amûrê nû tê girêdan...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Amûrê nû tê girêdan…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Amûr hate pejirandin!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Ti amûr nehatin dîtin.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Di torê de pirsgirêk heye.</string>
@@ -595,7 +595,7 @@
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Têkilîdêrên te guhertoya Signalê ya kevn bi kar dihênin. Ji wan re bibêje, berê rastandina hejmara ewlehiyê, bila Signalê hildemînin,</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Têkilîdêrên te guhertoyeke nûtir ya Signalê ya bi dirûva QR kodê re ne lihev, bi kar dihînin. Ji bo danberhevê ji kerema xwe hildemîne.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Koda QR ku hat venerîn, bi rastî nehatiye dirûvandina koda rastandina ewlehiyê. Ji kerema xwe dîsa koda QR venerîne.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Hejmara ewlehiyê parve bike, bi rêya...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Hejmara ewlehiyê parve bike, bi rêya…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Hejmara ewlehiyê ya Signala me:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Xuya ye ku sepanekî te ya ku pê parve bikî tune.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Di rûnûsgehê de qet hejmara ewlehiyê ku bidî ber hev tune</string>
@@ -721,7 +721,7 @@
   <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Berdeng tune ne</string>
-  <string name="contact_selection_group_activity__finding_contacts">Berdeng tên barkirin...</string>
+  <string name="contact_selection_group_activity__finding_contacts">Berdeng tên barkirin…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">Wêneyê Berdengî</string>
   <!--ContactSelectionListFragment-->
@@ -769,7 +769,7 @@
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Bikişîne jêr</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Welat dihên barkirin...</string>
+  <string name="country_selection_fragment__loading_countries">Welat dihên barkirin…</string>
   <string name="country_selection_fragment__search">Lêgerrîn</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Ji bo ku girêbidî, QR koda ku di amûrê xuya venerîne</string>
@@ -831,15 +831,15 @@
   <!--log_submit_activity-->
   <string name="log_submit_activity__log_fetch_failed">Tomar li amûra te nehatin xwendin. Lê dîsa jî bi ADB dikarî bigihîjî tomaran.</string>
   <string name="log_submit_activity__thanks">Ji bo alîkarîya te sipas!</string>
-  <string name="log_submit_activity__submitting">Dihê şandin...</string>
+  <string name="log_submit_activity__submitting">Dihê şandin…</string>
   <string name="log_submit_activity__no_browser_installed">Gerokeke sazkirî tune</string>
   <string name="log_submit_activity__button_dont_submit">Neşîne</string>
   <string name="log_submit_activity__button_submit">Bişîne</string>
   <string name="log_submit_activity__button_got_it">Baş e</string>
   <string name="log_submit_activity__button_compose_email">Epeyam binivîse</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Ev tomar ji bo ku tevkar bibînin dê bi eşkereyî bihê weşandin, Berî ku bişînî dikarî biceribînî û serast bikî.</string>
-  <string name="log_submit_activity__loading_logs">Tomar têne barkirin...</string>
-  <string name="log_submit_activity__uploading_logs">Tomar têne hilbarkirin...</string>
+  <string name="log_submit_activity__loading_logs">Tomar têne barkirin…</string>
+  <string name="log_submit_activity__uploading_logs">Tomar têne hilbarkirin…</string>
   <string name="log_submit_activity__success">Serkeftin!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Vê URLê ji ber bigire û wê li raporta xwe ya pirsgirêkan zêde bike an jî piştgiriyê bide e-peyamê:\n\n<b>%1$s</b>\n</string>
   <string name="log_submit_activity__copied_to_clipboard">Li rûnûsgehê hate kopîkirin</string>
@@ -865,7 +865,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">MÊZEKIRIN</string>
   <string name="message_recipients_list_item__resend">DÎSA ŞANDIN</string>
-  <string name="message_recipients_list_item__resending">Tê dîsa şandin...</string>
+  <string name="message_recipients_list_item__resending">Tê dîsa şandin…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s tevlî bû komê.</item>
@@ -917,7 +917,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Eger tu bixwazî ewlehiya şîfreya xwe bi %s bipejirînî, nimreya li jor bi nimreya ser amûra xwe re bide ber hev. Wek alternatîv, tu dikarî koda li ser telefona wan bivenerînî, an jî ji wan bixwazî ku koda te bivenerin. <a href="https://signal.org/redirect/safety-numbers">Zêdetir hîn bibe.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Ji bo venerînê bitepîne</string>
-  <string name="verify_display_fragment__loading">Tê barkirin...</string>
+  <string name="verify_display_fragment__loading">Tê barkirin…</string>
   <string name="verify_display_fragment__verified">Rastandî ye</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Hejmara ewlehiyê parve bike</string>
@@ -1087,7 +1087,7 @@
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Peyama nû ji bo...</string>
+  <string name="contact_selection_list__unknown_contact">Peyama nû ji bo…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Lêgerîn</string>
   <!--conversation_callable_secure-->
@@ -1187,12 +1187,12 @@
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Tê jêbirin</string>
-  <string name="trimmer__deleting_old_messages">Peyamên kevin tên jêbirin...</string>
+  <string name="trimmer__deleting_old_messages">Peyamên kevin tên jêbirin…</string>
   <string name="trimmer__old_messages_successfully_deleted">Peyamên kevin hatin jêbirin</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Nîşaneka raguhastinê</string>
-  <string name="ConversationListFragment_loading">Tê barkirin...</string>
-  <string name="CallNotificationBuilder_connecting">Tê girêdan...</string>
+  <string name="ConversationListFragment_loading">Tê barkirin…</string>
+  <string name="CallNotificationBuilder_connecting">Tê girêdan…</string>
   <string name="Permissions_permission_required">Destûr pêwîst e</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Ji bo Signal bikaribe SMSan bişîne destûra SMSê pêdivî ye, lê destûr nehatiye dayin. Ji kerema xwe ji sazkariyên sepanan, \"Destûr\"an bibijêre û \"SMS\"ê çalak bike.</string>
   <string name="Permissions_continue">Bidomîne</string>
@@ -1217,8 +1217,8 @@
   <string name="RegistrationActivity_restore">Vegerîne</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Nikarî paşekeftên yên guhertoyên nûtir yên Signalê bihundirînî</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Pêborîna paşekeftê şaş e</string>
-  <string name="RegistrationActivity_checking">Tê kontrol kirin...</string>
-  <string name="RegistrationActivity_d_messages_so_far">Heta niha %d peyam...</string>
+  <string name="RegistrationActivity_checking">Tê kontrol kirin…</string>
+  <string name="RegistrationActivity_d_messages_so_far">Heta niha %d peyam…</string>
   <string name="RegistrationActivity_restore_from_backup">Ji paşekeftê vegerîne?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Peyam û medyayên xwe ji paşekeftek xwecihî vegerîne. Ku niha venegerînî tu yê nikaribî paşê vegerînî.</string>
   <string name="RegistrationActivity_backup_size_s">Mezinahiya paşekeftê: %s</string>
@@ -1233,7 +1233,7 @@
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Ji bo Signal paşkeftan ava bike destûra Bîrbara Derveyî pêwîst e, lê destûr nehatiye dayin. Ji kerema xwe ji sazkariyên sepanê, \"Destûr\"an bibijêre û \"Bîrbar\"ê çalak bike.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Paşekefta nûtirîn: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Didome</string>
-  <string name="LocalBackupJob_creating_backup">Paşekeft tê avakirin...</string>
+  <string name="LocalBackupJob_creating_backup">Paşekeft tê avakirin…</string>
   <string name="ProgressPreference_d_messages_so_far">Heta niha %d peyam</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Ji kerema xwe koda piştrastkirinê ya me bo %s şandiye têkin.</string>
   <string name="RegistrationActivity_wrong_number">Jimara çewt</string>
