--- a/res/values-lg/strings.xml
+++ b/res/values-lg/strings.xml
@@ -201,7 +201,7 @@ a</string>
   <string name="GroupCreateActivity_creating_group">ku tondawo %1$s…</string>
   <string name="GroupCreateActivity_updating_group">ku zabujja %1$s.</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Tekisobose kugattako %1$s kubanga tebakozesa Signal</string>
-  <string name="GroupCreateActivity_loading_group_details">Loading group details...</string>
+  <string name="GroupCreateActivity_loading_group_details">Loading group details…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Ekibinja kino wakyegattako dda.</string>
   <!--GroupShareProfileView-->
   <!--GroupMembersDialog-->
@@ -266,7 +266,7 @@ a</string>
 • Soma obubaka bwo bwona
  \n.• Sindika obubaka mu manya go</string>
   <string name="DeviceProvisioningActivity_content_progress_title">Divayisi eyungibwaako</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Divayisi empya eyungibwaako...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Divayisi empya eyungibwaako…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Divayisi ekiriziddwa!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Tewali divayisi erabiddwa.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Omukutu guliko ekizibu.</string>
@@ -663,7 +663,7 @@ gy\'olonze (%s) sintuufu.</string>
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Obubaka obupya eri...</string>
+  <string name="contact_selection_list__unknown_contact">Obubaka obupya eri…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Essimu</string>
   <!--conversation_callable_secure-->
@@ -752,7 +752,7 @@ gy\'olonze (%s) sintuufu.</string>
   <string name="trimmer__old_messages_successfully_deleted">Obubaka obukadde busangulidwa ddala</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">akatambuza</string>
-  <string name="CallNotificationBuilder_connecting">Tukonekitinga...</string>
+  <string name="CallNotificationBuilder_connecting">Tukonekitinga…</string>
   <string name="Permissions_continue">genda maaso</string>
   <string name="registration_activity__skip">Buuka</string>
   <string name="registration_activity__register">Wewandiise</string>
