--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">Taip</string>
   <string name="no">Ne</string>
   <string name="delete">Ištrinti</string>
-  <string name="please_wait">Prašome palaukti...</string>
+  <string name="please_wait">Prašome palaukti…</string>
   <string name="save">Įrašyti</string>
   <string name="note_to_self">Pastabos sau</string>
   <!--AbstractNotificationBuilder-->
@@ -12,7 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationMigrationActivity-->
-  <string name="ApplicationMigrationActivity__signal_is_updating">Signal atsinaujina...</string>
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal atsinaujina…</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Šiuo metu: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Jūs dar nesate nustatę slaptafrazės!</string>
@@ -34,7 +34,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Tai visiems laikams atrakins Signal ir žinučių pranešimus.</string>
   <string name="ApplicationPreferencesActivity_disable">Išjungti</string>
   <string name="ApplicationPreferencesActivity_unregistering">Išregistruojama</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Išregistruojama iš Signal žinučių ir skambučių...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Išregistruojama iš Signal žinučių ir skambučių…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Išjungti Signal žinutes ir skambučius?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Išjunkite Signal žinutes ir skambučius išsiregistruodami iš serverio. Norėdami vėl jais naudotis, jūs turėsite iš naujo užregistruoti savo telefono numerį.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Klaida prisijungiant prie serverio!</string>
@@ -69,8 +69,8 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Norint pridėti vietą, Signal reikia vietos leidimo, tačiau jis buvo visam laikui uždraustas. Pereikite į programėlės nustatymų meniu, pasirinkite \"Leidimai\" ir įjunkite \"Vietą\".</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Norint fotografuoti, Signal reikia kameros leidimo, tačiau jis buvo visam laikui uždraustas. Pereikite į programėlės nustatymų meniu, pasirinkite \"Leidimai\" ir įjunkite \"Kamerą\".</string>
   <!--AttachmentUploadJob-->
-  <string name="AttachmentUploadJob_uploading_media">Įkeliama medija...</string>
-  <string name="AttachmentUploadJob_compressing_video_start">Glaudinamas vaizdo įrašas...</string>
+  <string name="AttachmentUploadJob_uploading_media">Įkeliama medija…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Glaudinamas vaizdo įrašas…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Klaida atkuriant garso įrašą!</string>
   <!--BlockedContactsActivity-->
@@ -235,17 +235,17 @@
     <item quantity="other">Įrašoma %1$d priedų</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Įrašomas į atmintį %1$d priedas...</item>
-    <item quantity="few">Įrašomi į atmintį %1$d priedai...</item>
-    <item quantity="many">Įrašoma į atmintį %1$d priedų...</item>
-    <item quantity="other">Įrašoma į atmintį %1$d priedų...</item>
+    <item quantity="one">Įrašomas į atmintį %1$d priedas…</item>
+    <item quantity="few">Įrašomi į atmintį %1$d priedai…</item>
+    <item quantity="many">Įrašoma į atmintį %1$d priedų…</item>
+    <item quantity="other">Įrašoma į atmintį %1$d priedų…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Laukiama...</string>
+  <string name="ConversationFragment_pending">Laukiama…</string>
   <string name="ConversationFragment_push">Duomenys (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Ištrinama</string>
-  <string name="ConversationFragment_deleting_messages">Ištrinamos žinutės...</string>
+  <string name="ConversationFragment_deleting_messages">Ištrinamos žinutės…</string>
   <string name="ConversationFragment_quoted_message_not_found">Pradinė žinutė nerasta</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Pradinė žinutė daugiau nebeprieinama</string>
   <string name="ConversationFragment_failed_to_open_message">Nepavyko atverti žinutės</string>
@@ -317,7 +317,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Atsiejus šį įrenginį, jis daugiau nebegalės siųsti ar gauti žinučių.</string>
   <string name="DeviceListActivity_network_connection_failed">Tinklo ryšys patyrė nesėkmę</string>
   <string name="DeviceListActivity_try_again">Bandykite dar kartą</string>
-  <string name="DeviceListActivity_unlinking_device">Atsiejamas įrenginys...</string>
+  <string name="DeviceListActivity_unlinking_device">Atsiejamas įrenginys…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Atsiejamas įrenginys</string>
   <string name="DeviceListActivity_network_failed">Tinklas patyrė nesėkmę!</string>
   <!--DeviceListItem-->
@@ -357,7 +357,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Šią ypatybę galite bet kuriuo metu įjungti ar išjungti savo Signal nustatymuose (Privatumas &gt; Siųsti nuorodų peržiūras).</string>
   <string name="ExperienceUpgradeActivity_got_it">Supratau</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Atgaunama žinutė...</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Atgaunama žinutė…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Ilgalaikė Signal susisiekimo triktis!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal nepavyko prisiregistruoti prie „Google Play“ paslaugų. Signal žinutės ir skambučiai buvo išjungti, prašome pabandyti iš naujo registruotis skyrelyje Nustatymai (angl. Settings) &gt; Išplėstiniai (angl. Advanced).</string>
@@ -378,9 +378,9 @@
   <string name="GroupCreateActivity_avatar_content_description">Grupės avataras</string>
   <string name="GroupCreateActivity_menu_apply_button">Taikyti</string>
   <string name="GroupCreateActivity_creating_group">Kuriama %1$s…</string>
-  <string name="GroupCreateActivity_updating_group">Atnaujinama %1$s...</string>
+  <string name="GroupCreateActivity_updating_group">Atnaujinama %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Nepavyko pridėti %1$s, kadangi tai nėra Signal naudotojas.</string>
-  <string name="GroupCreateActivity_loading_group_details">Įkeliama išsamesnė grupės informacija...</string>
+  <string name="GroupCreateActivity_loading_group_details">Įkeliama išsamesnė grupės informacija…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Jūs jau esate grupėje.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Bendrinti jūsų profilio vardą ir nuotrauką su šia grupe?</string>
@@ -397,7 +397,7 @@
   <string name="InviteActivity_share">Bendrinti</string>
   <string name="InviteActivity_choose_contacts">Pasirinkti adresatus</string>
   <string name="InviteActivity_cancel">Atsisakyti</string>
-  <string name="InviteActivity_sending">Siunčiama...</string>
+  <string name="InviteActivity_sending">Siunčiama…</string>
   <string name="InviteActivity_heart_content_description">Širdis</string>
   <string name="InviteActivity_invitations_sent">Pakvietimai išsiųsti!</string>
   <string name="InviteActivity_invite_to_signal">Pakviesti į Signal</string>
@@ -417,7 +417,7 @@
   <string name="InviteActivity_no_app_to_share_to">Atrodo, kad neturite programėlių su kuriomis bendrinti.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Draugai neleidžia draugams kalbėtis nešifruotai.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Dirbama fone...</string>
+  <string name="Job_working_in_the_background">Dirbama fone…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Nepavyko išsiųsti</string>
   <string name="MessageDetailsRecipient_new_safety_number">Naujas saugumo numeris</string>
@@ -445,10 +445,10 @@
     <item quantity="other">Tai visiems laikams ištrins visas %1$d pažymėtų žinučių.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Ištrinama</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Ištrinamos žinutės...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Ištrinamos žinutės…</string>
   <string name="MediaOverviewActivity_Documents">Dokumentai</string>
   <string name="MediaOverviewActivity_Select_all">Žymėti visus</string>
-  <string name="MediaOverviewActivity_collecting_attachments">Renkami priedai...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Renkami priedai…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal skambutis yra eigoje</string>
   <string name="NotificationBarManager__establishing_signal_call">Užmezgiamas Signal skambutis</string>
@@ -467,7 +467,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Bakstelėkite, norėdami pasirinkti</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Pridėti paaiškinimą...</string>
+  <string name="MediaSendActivity_add_a_caption">Pridėti paaiškinimą…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Elementas buvo pašalintas, nes jis viršijo leidžiamą dydį</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera neprieinama.</string>
   <string name="MediaSendActivity_message_to_s">Žinutė skirta %s</string>
@@ -519,7 +519,7 @@
         \n• Siųsti žinutes jūsų vardu
     </string>
   <string name="DeviceProvisioningActivity_content_progress_title">Susiejamas įrenginys</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Susiejamas naujas įrenginys...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Susiejamas naujas įrenginys…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Įrenginys patvirtintas!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Įrenginys nerastas.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Tinklo klaida.</string>
@@ -720,7 +720,7 @@
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Jūsų adresatas naudoja seną Signal versiją. Prieš patvirtindami savo saugumo numerį, paprašykite, kad jis atnaujintų programėlę.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Jūsų adresatas naudoja naujesnę Signal versiją su nesuderinamu QR kodo formatu. Norėdami palyginti, atsinaujinkite programėlę.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Nuskenuotas QR kodas nėra teisingai formatuotas saugumo numerio patvirtinimo kodas. Prašome bandyti skenuoti dar kartą.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Dalintis saugumo numeriu per...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Dalintis saugumo numeriu per…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Mūsų Signal saugumo numeris:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Atrodo, kad neturite programėlių su kuriomis dalintis.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Iškarpinėje palyginimui nebuvo rasta jokio saugumo numerio</string>
@@ -900,7 +900,7 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Adresato nuotrauka</string>
   <!--audio_view-->
-  <string name="audio_view__play_pause_accessibility_description">Atkurti ... Pristabdyti</string>
+  <string name="audio_view__play_pause_accessibility_description">Atkurti … Pristabdyti</string>
   <string name="audio_view__download_accessibility_description">Atsisiųsti</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Garso įrašai</string>
@@ -914,7 +914,7 @@
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Slinkti į apačią</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Įkeliamos šalys...</string>
+  <string name="country_selection_fragment__loading_countries">Įkeliamos šalys…</string>
   <string name="country_selection_fragment__search">Ieškoti</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Norėdami susieti, nuskenuokite įrenginyje rodomą QR kodą</string>
@@ -1022,7 +1022,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">RODYTI</string>
   <string name="message_recipients_list_item__resend">SIŲSTI IŠ NAUJO</string>
-  <string name="message_recipients_list_item__resending">Siunčiama iš naujo...</string>
+  <string name="message_recipients_list_item__resending">Siunčiama iš naujo…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s prisijungė prie grupės.</item>
@@ -1076,7 +1076,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Jeigu norite patvirtinti savo šifravimo su %s saugumą, palyginkite aukščiau esantį numerį su numeriu šio kontakto įrenginyje. Arba kitu atveju, galite nuskenuoti kodą jo telefone arba paprašyti kontakto, kad nuskenuotų jūsų kodą. <a href="https://signal.org/redirect/safety-numbers">Sužinokite daugiau.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Bakstelėkite, norėdami nuskenuoti</string>
-  <string name="verify_display_fragment__loading">Įkeliama...</string>
+  <string name="verify_display_fragment__loading">Įkeliama…</string>
   <string name="verify_display_fragment__verified">Patvirtinta(-s)</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Dalintis saugumo numeriu</string>
@@ -1254,7 +1254,7 @@
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Nauja žinutė, skirta...</string>
+  <string name="contact_selection_list__unknown_contact">Nauja žinutė, skirta…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Skambinti</string>
   <!--conversation_callable_secure-->
@@ -1359,12 +1359,12 @@
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Ištrinama</string>
-  <string name="trimmer__deleting_old_messages">Ištrinamos senos žinutės...</string>
+  <string name="trimmer__deleting_old_messages">Ištrinamos senos žinutės…</string>
   <string name="trimmer__old_messages_successfully_deleted">Senos žinutės sėkmingai ištrintos</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Perdavimo piktograma</string>
-  <string name="ConversationListFragment_loading">Įkeliama...</string>
-  <string name="CallNotificationBuilder_connecting">Jungiamasi...</string>
+  <string name="ConversationListFragment_loading">Įkeliama…</string>
+  <string name="CallNotificationBuilder_connecting">Jungiamasi…</string>
   <string name="Permissions_permission_required">Reikalingas leidimas</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Norint siųsti SMS žinutes, Signal reikia SMS leidimo, tačiau jis buvo visam laikui uždraustas. Pereikite į programėlės nustatymus, pasirinkite \"Leidimai\" ir įjunkite \"SMS\".</string>
   <string name="Permissions_continue">Tęsti</string>
@@ -1389,8 +1389,8 @@
   <string name="RegistrationActivity_restore">Atkurti</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Nepavyksta importuoti atsarginių kopijų iš naujesnių Signal versijų</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Neteisinga atsarginės kopijos slaptafrazė</string>
-  <string name="RegistrationActivity_checking">Tikrinama...</string>
-  <string name="RegistrationActivity_d_messages_so_far">Jau %d žinučių...</string>
+  <string name="RegistrationActivity_checking">Tikrinama…</string>
+  <string name="RegistrationActivity_d_messages_so_far">Jau %d žinučių…</string>
   <string name="RegistrationActivity_restore_from_backup">Atkurti iš atsarginės kopijos?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Atkurkite savo žinutes ir mediją iš vietinės atsarginės kopijos. Jeigu neatkursite dabar, vėliau to padaryti nebegalėsite.</string>
   <string name="RegistrationActivity_backup_size_s">Atsarginės kopijos dydis: %s</string>
@@ -1405,7 +1405,7 @@
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Norint daryti atsargines kopijas, Signal reikia išorinės saugyklos leidimo, tačiau jis buvo visam laikui uždraustas. Pereikite į programėlės nustatymus, pasirinkite \"Leidimai\" ir įjunkite \"Saugyklą\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Paskiausia atsarginė kopija: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Eigoje</string>
-  <string name="LocalBackupJob_creating_backup">Daroma atsarginė kopija...</string>
+  <string name="LocalBackupJob_creating_backup">Daroma atsarginė kopija…</string>
   <string name="ProgressPreference_d_messages_so_far">Jau %d žinučių</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Įveskite į %s išsiųstą patvirtinimo kodą.</string>
   <string name="RegistrationActivity_wrong_number">Neteisingas numeris</string>
