--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">Jā</string>
   <string name="no">Nē</string>
   <string name="delete">Dzēst</string>
-  <string name="please_wait">Lūdzu uzgaidiet...</string>
+  <string name="please_wait">Lūdzu uzgaidiet…</string>
   <string name="save">Saglabāt</string>
   <string name="note_to_self">Piezīme sev</string>
   <!--AbstractNotificationBuilder-->
@@ -12,7 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationMigrationActivity-->
-  <string name="ApplicationMigrationActivity__signal_is_updating">Signal tiek atjaunots...</string>
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal tiek atjaunots…</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Pašlaik: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Jūs vēl neesat iestatījuši paroli!</string>
@@ -32,7 +32,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Šī opcija permanenti atslēgs aplikāciju un paziņojumus par jaunām ziņām.</string>
   <string name="ApplicationPreferencesActivity_disable">Atspējot</string>
   <string name="ApplicationPreferencesActivity_unregistering">Atreģistrēties</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Atreģistrējos no Signal ziņām un zvaniem...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Atreģistrējos no Signal ziņām un zvaniem…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Atspējot Signal ziņas un zvanus?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Atreģistrējoties no servera, atspējot Signal ziņas un zvanus. Lai šīs opcijas atsāktu lietot, Jums nākotnē būs atkārtoti jāreģistrē savs tālruņa numurs.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Nevarēja savienoties ar serveri!</string>
@@ -66,8 +66,8 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal nepieciešama atļauja pieejai pie atrašanās vietas pakalpojumiem, bet tā ir liegta. Ejiet uz lietotnes iestatījumiem, izvēlieties „Atļaujas“ un ieslēdziet „Atrašanās vieta“.</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Lai uzņemtu fotogrāfijas, Signal nepieciešama atļauja pieejai pie kameras, bet tā ir liegta. Ejiet uz lietotnes iestatījumiem, izvēlieties „Atļaujas“ un ieslēdziet „Kamera“.</string>
   <!--AttachmentUploadJob-->
-  <string name="AttachmentUploadJob_uploading_media">Multivides augšupielāde...</string>
-  <string name="AttachmentUploadJob_compressing_video_start">Video saspiešana...</string>
+  <string name="AttachmentUploadJob_uploading_media">Multivides augšupielāde…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Video saspiešana…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Atskaņojot audio radās problēma!</string>
   <!--BlockedContactsActivity-->
@@ -222,16 +222,16 @@
     <item quantity="other">Saglabā %1$d pielikumus</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="zero">Saglabā %1$d pielikumus krātuvē...</item>
-    <item quantity="one">Saglabā pielikumu krātuvē...</item>
-    <item quantity="other">Saglabā %1$d pielikumus krātuvē...</item>
+    <item quantity="zero">Saglabā %1$d pielikumus krātuvē…</item>
+    <item quantity="one">Saglabā pielikumu krātuvē…</item>
+    <item quantity="other">Saglabā %1$d pielikumus krātuvē…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Gaida...</string>
+  <string name="ConversationFragment_pending">Gaida…</string>
   <string name="ConversationFragment_push">Internets(Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Dzēš</string>
-  <string name="ConversationFragment_deleting_messages">Dzēš ziņas...</string>
+  <string name="ConversationFragment_deleting_messages">Dzēš ziņas…</string>
   <string name="ConversationFragment_quoted_message_not_found">Oriģinālā ziņa netika atrasta</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Oriģinālā ziņa vairs nav pieejama</string>
   <string name="ConversationFragment_failed_to_open_message">Neizdevās atvērt ziņu</string>
@@ -250,7 +250,7 @@
     <item quantity="other">Šis neatgriezeniski dzēsīs visas %1$d izvēlētās sarunas.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Dzēš</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Dzēš izvēlētās sarunas...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Dzēš izvēlētās sarunas…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="zero">%d Saruna arhivēta</item>
     <item quantity="one">Saruna arhivēta</item>
@@ -297,7 +297,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Atvienojot šo ierīci, tā vairs nevarēs sūtīt vai saņemt ziņas.</string>
   <string name="DeviceListActivity_network_connection_failed">Tīkla savienojums neizdevās</string>
   <string name="DeviceListActivity_try_again">Mēģināt vēlreiz</string>
-  <string name="DeviceListActivity_unlinking_device">Atvieno ierīci...</string>
+  <string name="DeviceListActivity_unlinking_device">Atvieno ierīci…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Atvieno ierīci</string>
   <string name="DeviceListActivity_network_failed">Tīkls neizdevās!</string>
   <!--DeviceListItem-->
@@ -337,7 +337,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Jūs variet ieslēgt vai izslēgt šo jebkurā laikā savos Signal iestatījumos (Privātums -&gt; Sūtīt saišu prekšskatījumus)</string>
   <string name="ExperienceUpgradeActivity_got_it">Sapratu</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Ziņas ielāde...</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Ziņas ielāde…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Ilgstoša Signal sakaru kļūda!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal neizdevās reģistrēties Google Play pakalpojumos. Signal ziņojumi un zvani ir atspējoti. Lūdzu, mēģiniet pārreģistrēties sadaļā Iestatījumi -&gt; Papildu.</string>
@@ -357,10 +357,10 @@
   <string name="GroupCreateActivity_contacts_invalid_number">Vienam no Jūsu grupas ir numurs, kas nevarēja nolasīt pareizi, Lūdzu labojiet vai izdzēsiet šo kontaktu un mēģiniet vēlreiz.</string>
   <string name="GroupCreateActivity_avatar_content_description">Grupas ikona</string>
   <string name="GroupCreateActivity_menu_apply_button">Pielietot</string>
-  <string name="GroupCreateActivity_creating_group">Izveido %1$s...</string>
-  <string name="GroupCreateActivity_updating_group">Arjauno %1$s...</string>
+  <string name="GroupCreateActivity_creating_group">Izveido %1$s…</string>
+  <string name="GroupCreateActivity_updating_group">Arjauno %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Neavarēja pievienot %1$s, jo tas nav Signal lietotājs.</string>
-  <string name="GroupCreateActivity_loading_group_details">Notiek grupas datu ielāde...</string>
+  <string name="GroupCreateActivity_loading_group_details">Notiek grupas datu ielāde…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Jūs jau esiet šajā grupā.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Dalīties ar Jūsu Profila attēlu un vārdu ar šo grupu?</string>
@@ -377,7 +377,7 @@
   <string name="InviteActivity_share">Dalīties</string>
   <string name="InviteActivity_choose_contacts">Izvēlēties kontaktus</string>
   <string name="InviteActivity_cancel">Atcelt</string>
-  <string name="InviteActivity_sending">Sūta...</string>
+  <string name="InviteActivity_sending">Sūta…</string>
   <string name="InviteActivity_heart_content_description">Sirds</string>
   <string name="InviteActivity_invitations_sent">Ielūgums nosutīts</string>
   <string name="InviteActivity_invite_to_signal">Uzaicināt uz Signal</string>
@@ -421,10 +421,10 @@
     <item quantity="other">Šis neatgriezeniski izdzēsīs visas%1$d atzīmētās ziņas.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Dzēš</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Dzēš ziņas...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Dzēš ziņas…</string>
   <string name="MediaOverviewActivity_Documents">Dokumenti</string>
   <string name="MediaOverviewActivity_Select_all">Izvēlēties visu</string>
-  <string name="MediaOverviewActivity_collecting_attachments">Apkopo pielikumus...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Apkopo pielikumus…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Notiek Signal zvans </string>
   <string name="NotificationBarManager__establishing_signal_call">Signal zvana izveide</string>
@@ -443,7 +443,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Pieskarieties, lai izvēlētos</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Pievienot komentāru...</string>
+  <string name="MediaSendActivity_add_a_caption">Pievienot komentāru…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Vienums tika noņemts, jo tas pārsniedza lieluma ierobežojumu</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera nav ieejama</string>
   <string name="MediaSendActivity_message_to_s">Ziņa priekš %s</string>
@@ -494,7 +494,7 @@
         \n• Sūtīt ziņas jūsu vārdā
     </string>
   <string name="DeviceProvisioningActivity_content_progress_title">Piesaista ierīci</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Piesaista jaunu ierīci...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Piesaista jaunu ierīci…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Ierīce apstiprināta!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Neviena ierīce netika atrasta.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Tīkla kļūda.</string>
@@ -685,7 +685,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Jūsu kontaktpersona izmanto vecu Signal versiju. Lūdzu palūdziet, lai atjauno, pirms apstipriniet drošības numuru.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Jūsu kontaktpersona izmanto jaunāku Signal versiju, ar nesaderīgu QR koda formātu. Lūdzu atjaunojiet, lai salīdzinātu.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Noskanētais QR kods nav pareizi formatēts drošības numura apstiprināšanas kods. Ludzu mēģiniet vēlreiz.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Dalīties ar drošības numuru izmantojot...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Dalīties ar drošības numuru izmantojot…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Mūsu Signal drošības numurs:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Izkstās, ka tev nav nevienas aplikācijas, lai dalītos.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Starpliktuvē netika atrasts drošības kods</string>
@@ -824,7 +824,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="contact_filter_toolbar__show_dial_pad_description">Parādīt cipartastatūru</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Nav kontaktu.</string>
-  <string name="contact_selection_group_activity__finding_contacts">Ielādē kontaktus...</string>
+  <string name="contact_selection_group_activity__finding_contacts">Ielādē kontaktus…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">Kontakta attēls</string>
   <!--ContactSelectionListFragment-->
@@ -863,7 +863,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Kontakta attēls</string>
   <!--audio_view-->
-  <string name="audio_view__play_pause_accessibility_description">Atskaņot ... Pauzēt</string>
+  <string name="audio_view__play_pause_accessibility_description">Atskaņot … Pauzēt</string>
   <string name="audio_view__download_accessibility_description">Lejupielādēt</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Audio</string>
@@ -877,7 +877,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Ritināt līdz apakšai </string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Ielādē valstis...</string>
+  <string name="country_selection_fragment__loading_countries">Ielādē valstis…</string>
   <string name="country_selection_fragment__search">Meklēt</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Noskenējiet QR kodu, ko rāda otra ierīce, lai to piesaistītu</string>
@@ -952,8 +952,8 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="log_submit_activity__button_got_it">Sapratu</string>
   <string name="log_submit_activity__button_compose_email">Rakstīt e-pastu</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Šis žurnāls tiks publicēts publiski, lai palīgi varētu apskatīt. Jūs vatiet pārskatīt un rediģēt to pirms iesniegšanas.</string>
-  <string name="log_submit_activity__loading_logs">Ielādē žurnālus(log)...</string>
-  <string name="log_submit_activity__uploading_logs">Augšupielādē žurnālus...</string>
+  <string name="log_submit_activity__loading_logs">Ielādē žurnālus(log)…</string>
+  <string name="log_submit_activity__uploading_logs">Augšupielādē žurnālus…</string>
   <string name="log_submit_activity__success">Izdevās!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Nokopējiet šo URL un pievienojiet to Jūsu kļūdas ziņojumam, vai atbalsta e-pastam<b>%1$s</b>\n</string>
   <string name="log_submit_activity__copied_to_clipboard">Kopēts starpliktuvē</string>
@@ -979,7 +979,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">SKATĪT</string>
   <string name="message_recipients_list_item__resend">PĀRSŪTĪT</string>
-  <string name="message_recipients_list_item__resending">Pārsūta...</string>
+  <string name="message_recipients_list_item__resending">Pārsūta…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="zero">%1$s pievienojās grupai.</item>
@@ -1032,7 +1032,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Ja vēlaties pārbaudīt šifrēšanas drošību ar %s, salīdziniet iepriekš norādīto numuru ar numuru ierīcē. Varat noskenēt kodu viņu tālrunī vai palūgt, lai neskenē jūsu kodu.<a href="https://signal.org/redirect/safety-numbers">Lasīt vairāk.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Pieskarieties, lai skenētu</string>
-  <string name="verify_display_fragment__loading">Lādē...</string>
+  <string name="verify_display_fragment__loading">Lādē…</string>
   <string name="verify_display_fragment__verified">Pārbaudīts</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Dalīties ar drošības numuru</string>
@@ -1203,7 +1203,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Jauna ziņa...</string>
+  <string name="contact_selection_list__unknown_contact">Jauna ziņa…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Zvanīt</string>
   <!--conversation_callable_secure-->
@@ -1311,8 +1311,8 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="trimmer__old_messages_successfully_deleted">Vecās ziņas veiksmīgi izdzēstas</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transporta ikona</string>
-  <string name="ConversationListFragment_loading">Lādē...</string>
-  <string name="CallNotificationBuilder_connecting">Savienojas...</string>
+  <string name="ConversationListFragment_loading">Lādē…</string>
+  <string name="CallNotificationBuilder_connecting">Savienojas…</string>
   <string name="Permissions_permission_required">Nepieciešama atļauja</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal ir nepieciešama SMS atļauja, lai sūtītu SMS kodu, bet tā ir pastāvīgi aizliekta. Ejiet uz lietotnes iestatījumiem, izvēlieties „Atļaujas“ un iespējojiet “SMS”.</string>
   <string name="Permissions_continue">Turpināt</string>
@@ -1337,8 +1337,8 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="RegistrationActivity_restore">Atjaunot</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Nevar importēt dublējumus no jaunākām Signal versijām</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Nepareiza dublējuma piekļuves frāze</string>
-  <string name="RegistrationActivity_checking">Pārbauda...</string>
-  <string name="RegistrationActivity_d_messages_so_far">%dziņas pagaidām...</string>
+  <string name="RegistrationActivity_checking">Pārbauda…</string>
+  <string name="RegistrationActivity_d_messages_so_far">%dziņas pagaidām…</string>
   <string name="RegistrationActivity_restore_from_backup">Vai atjaunot no dublējuma?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Atjaunojiet ziņas un multividi no lokāla dublējuma. Ja neatjaunosit tūlīt, vēlāk nevarēsit to atjaunot.</string>
   <string name="RegistrationActivity_backup_size_s">Dublējuma izmērs: %s</string>
