--- a/res/values-qu-rEC/strings.xml
+++ b/res/values-qu-rEC/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">Ari</string>
   <string name="no">Mana</string>
   <string name="delete">Pichana</string>
-  <string name="please_wait">Ashata shuyapay...</string>
+  <string name="please_wait">Ashata shuyapay…</string>
   <string name="save">Allichina</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Mushuk chaski</string>
@@ -27,7 +27,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Kayka Signal unanchata, shinallata chaski willachitapash chaysiri rikuchinka.</string>
   <string name="ApplicationPreferencesActivity_disable">Mana rikuchina</string>
   <string name="ApplicationPreferencesActivity_unregistering">Llukshirikunki</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Signal ukumanta anchurikunki...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Signal ukumanta anchurikunki…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Chaskikunata, kayachikunatapash Signal ukumanta anchuchinayanchu</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Kayka chaskikunata Signal ukumanta mana rikuchinkachu, servidor ukupi tiyashkakunata pichashpa. Kutinlla Signalta charinkapak munashpaka, kutinmi kikinpa williwilliwan killkarina kanki.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">¡Mana servidor ukuman yaykuyta ushankichu!</string>
@@ -184,14 +184,14 @@
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
     <item quantity="one">Kimichichishkata allichik ukupi allichirikun</item>
-    <item quantity="other">%1$d kimichichishkakunata  allichik ukupi allichirikun...</item>
+    <item quantity="other">%1$d kimichichishkakunata  allichik ukupi allichirikun…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Paktarinara...</string>
+  <string name="ConversationFragment_pending">Paktarinara…</string>
   <string name="ConversationFragment_push">Tukuywillay (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Pichanakunchik</string>
-  <string name="ConversationFragment_deleting_messages">Chaskita pichanakunchik...</string>
+  <string name="ConversationFragment_deleting_messages">Chaskita pichanakunchik…</string>
   <string name="ConversationFragment_quoted_message_not_found">Mana kallari chaskita taririnchu</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Kallari chaski ña mana tiyanchu</string>
   <!--ConversationListActivity-->
@@ -248,7 +248,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Kay antahillaymanta llukshishpaka  mana chaskikunata kachayta, chaskitapash ushankichu.</string>
   <string name="DeviceListActivity_network_connection_failed">Internetman mana yaykuyta usharinchu</string>
   <string name="DeviceListActivity_try_again">Kutinlla kallari</string>
-  <string name="DeviceListActivity_unlinking_device">Antahillaymanta llukshikunki...</string>
+  <string name="DeviceListActivity_unlinking_device">Antahillaymanta llukshikunki…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Antahillaymanta llukshikunki</string>
   <string name="DeviceListActivity_network_failed">¡Internet rirka!</string>
   <!--DeviceListItem-->
@@ -298,10 +298,10 @@
   <string name="GroupCreateActivity_contacts_invalid_number">Tantanakuy ukumanta shuk mashika killkakatinkapak mana alli yupayta charinchu. Ama shina kashpa, allichipay mana kashpaka pichapay chay yupaymashita, shinashpa kutinlla kallaripay.</string>
   <string name="GroupCreateActivity_avatar_content_description">Tantanakuypa shuyuta ruray</string>
   <string name="GroupCreateActivity_menu_apply_button">Arinina</string>
-  <string name="GroupCreateActivity_creating_group">Wiñarikun %1$s...</string>
-  <string name="GroupCreateActivity_updating_group">Mushukyachishpa %1$s...</string>
+  <string name="GroupCreateActivity_creating_group">Wiñarikun %1$s…</string>
+  <string name="GroupCreateActivity_updating_group">Mushukyachishpa %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Mana yaykuchita usharirkachu %1$s mana Signal yupay mashichu kan.</string>
-  <string name="GroupCreateActivity_loading_group_details">Tantanakuypa willaykunata sikachinakunchik...</string>
+  <string name="GroupCreateActivity_loading_group_details">Tantanakuypa willaykunata sikachinakunchik…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Ñami tantakuy ukupi kan.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Kallari shutita, shuyutapash kay tantanakuypi rikuchun munankichu</string>
@@ -317,7 +317,7 @@
   <string name="InviteActivity_share">Yallichirina</string>
   <string name="InviteActivity_choose_contacts">Yupaymashikunata akllapay</string>
   <string name="InviteActivity_cancel">Shayachina</string>
-  <string name="InviteActivity_sending">Kachakun...</string>
+  <string name="InviteActivity_sending">Kachakun…</string>
   <string name="InviteActivity_heart_content_description">Shunku</string>
   <string name="InviteActivity_invitations_sent">¡Kumpitaykunata kachashka!</string>
   <string name="InviteActivity_invite_to_signal">Signal ukuman kayachiy</string>
@@ -353,7 +353,7 @@
     <item quantity="other">Kay akllashka %1$d chaskikunata picharinkapachami.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Pichakun</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Chaskikunata pichakun...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Chaskikunata pichakun…</string>
   <string name="MediaOverviewActivity_Documents">Pankakuna</string>
   <string name="MediaOverviewActivity_Select_all">Tukuyta akllana</string>
   <!--- NotificationBarManager-->
@@ -408,7 +408,7 @@
 • Tukuy chaskikunata killkakatipay
 \n• Chaskita kikinpa shutipi kachapay</string>
   <string name="DeviceProvisioningActivity_content_progress_title">Antahillayta kimichikunki</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Mushuk antahillayta kimichikunki...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Mushuk antahillayta kimichikunki…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">¡Antahillayta kimichishka!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Nima antahillayta mana taririrkachu.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Internet waklli.</string>
@@ -567,7 +567,7 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Kikinpa yupaymashi manara mushukyachin Signalta, Utiyashpa mushukyachichun mañapay manara kikinta pakalla yupayta mañakpillata.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Kikinpa yupaymashi shuk mana alli Signal QR unanchawan kakun. Mañanchi mushukyachichun chimpapurankapak.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">QR unancha riksichka mana riksina pakalla yupayta kunchu. Kutinlla riksichishpa rurapay.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Pakalla yupayta riksichipay kaywan...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Pakalla yupayta riksichipay kaywan…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Ñukanchikpa Signal pakalla yupaykuna:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Kaykunata kachankapakka nima aplicación illanmi yarin.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Mana pakalla yupayta tarirkanchikchu chimpapurankapak panka allichik ukuwan.</string>
@@ -688,7 +688,7 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Mana yupay mashikuna tiyanchu.</string>
-  <string name="contact_selection_group_activity__finding_contacts">Mashi yupaykunata sikachikun...</string>
+  <string name="contact_selection_group_activity__finding_contacts">Mashi yupaykunata sikachikun…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">Yupay mashipa shuyu</string>
   <!--ContactSelectionListFragment-->
@@ -736,7 +736,7 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Puchukaykaman kuyuriy</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Mamallaktakunata sikachikun...</string>
+  <string name="country_selection_fragment__loading_countries">Mamallaktakunata sikachikun…</string>
   <string name="country_selection_fragment__search">Maskana </string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Anta hillaypi rikurikuk QR unanchata tinkinkapak riksichina </string>
@@ -884,7 +884,7 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Wakaychishka pakalla  yupayta kaywan %s rikunkapak munashpaka, hawapi yupayta kay antanikipi llukshishka yupaywan chimpapurapay kikinpa kayachirikuk mashiwan. Mana kashpaka, rantimanta unanchata  shuyurikchashpa ushankichik. <a href="https://signal.org/redirect/safety-numbers">Ashtawan yachana.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Shuyurikchankapak llapipay.</string>
-  <string name="verify_display_fragment__loading">Paskakun...</string>
+  <string name="verify_display_fragment__loading">Paskakun…</string>
   <string name="verify_display_fragment__verified">Shinapachami</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Kikinpa wakaychishka yupayta riksichiy</string>
@@ -1045,7 +1045,7 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Shukman mushuk chaskita...</string>
+  <string name="contact_selection_list__unknown_contact">Shukman mushuk chaskita…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Kayachina</string>
   <!--conversation_callable_secure-->
@@ -1146,12 +1146,12 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Pichanakunchik</string>
-  <string name="trimmer__deleting_old_messages">Mawkayashka chaskikunata pichakun...</string>
+  <string name="trimmer__deleting_old_messages">Mawkayashka chaskikunata pichakun…</string>
   <string name="trimmer__old_messages_successfully_deleted">Mawka chaskikunata allipachami picharirka</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Iconota apana</string>
-  <string name="ConversationListFragment_loading">Paskakun...</string>
-  <string name="CallNotificationBuilder_connecting">Tinkirikun...</string>
+  <string name="ConversationListFragment_loading">Paskakun…</string>
+  <string name="CallNotificationBuilder_connecting">Tinkirikun…</string>
   <string name="Permissions_permission_required">Mañayta mutsurinmi</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal ari nichun munanmi kikinpa SMS killkashkata kachankapak, shinapash mana arinirishkachu. \"Menú de configuración\" ukuman yaykushpa \"Permisos\" nikukta akllapay, \"SMS\" paskarichun.</string>
   <string name="Permissions_continue">Katina</string>
@@ -1175,8 +1175,8 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <string name="RegistrationActivity_enter_backup_passphrase">Chayshinalla wakaychishkapa paskachik shimita yaykuchipay </string>
   <string name="RegistrationActivity_restore">Tikrachimuna</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Chayshinalla wakaychishkapa paskachik shimita yaykuchishkaka mana allichu kan</string>
-  <string name="RegistrationActivity_checking">Rikukunrami...</string>
-  <string name="RegistrationActivity_d_messages_so_far">Kunankaman %d chaskikuna...</string>
+  <string name="RegistrationActivity_checking">Rikukunrami…</string>
+  <string name="RegistrationActivity_d_messages_so_far">Kunankaman %d chaskikuna…</string>
   <string name="RegistrationActivity_restore_from_backup">Chayshinalla wakaychishkamanta tikrachimunayanchu</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Chaskikunata uyayrikuchikkunatapash chayshinalla wakaychishkakunamanta tikrachimuna. Mana kunan tikrachimushpaka hipamanka ña mana usharinkachu.</string>
   <string name="RegistrationActivity_backup_size_s">Chayshinalla wakaychishkakunapa mashnakuna: %s</string>
