--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -34,7 +34,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">После этого приложение Signal и его уведомления всегда будут видны без ввода пароля.</string>
   <string name="ApplicationPreferencesActivity_disable">Отключить</string>
   <string name="ApplicationPreferencesActivity_unregistering">Отмена регистрации</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Отменяем регистрацию в Signal...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Отменяем регистрацию в Signal…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Отключить сообщения и звонки через Signal?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Отключить сообщения и звонки через Signal, отменив регистрацию на сервере. Вам нужно будет заново зарегистрировать свой номер телефона, чтобы воспользоваться ими в будущем.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Ошибка подключения к серверу!</string>
@@ -183,7 +183,7 @@
   <string name="ConversationActivity_to_capture_photos_and_video_allow_signal_access_to_the_camera">Для создания фото и видео разрешите Signal доступ к камере.</string>
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Signal требуется разрешение на доступ к камере, чтобы снимать фото или видео, но оно было вами отклонено. Нажмите «Продолжить», чтобы перейти в настройки приложения, откройте «Разрешения» и включите «Камера».</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Signal требуется разрешение на доступ к камере, чтобы снимать фото или видео </string>
-  <string name="ConversationActivity_enable_the_microphone_permission_to_capture_videos_with_sound">Включите разрешение на доступ к микрофону, чтобы снимать видео со звуком.</string>
+  <string name="ConversationActivity_enable_the_microphone_permission_to_capture_videos_with_sound">Предоставьте разрешение на доступ к микрофону, чтобы снимать видео со звуком.</string>
   <string name="ConversationActivity_signal_needs_the_recording_permissions_to_capture_video">Signal требуется разрешение на доступ к микрофону, чтобы снимать видео, но оно было вами отклонено. Нажмите «Продолжить», чтобы перейти в настройки приложения, откройте «Разрешения» и включите «Микрофон» и «Камера».</string>
   <string name="ConversationActivity_signal_needs_recording_permissions_to_capture_video">Signal требуется разрешение на доступ к микрофону, чтобы записывать видео.</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
@@ -304,7 +304,7 @@
   <string name="CustomDefaultPreference_none">Нет</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Только что</string>
-  <string name="DateUtils_minutes_ago">%dм</string>
+  <string name="DateUtils_minutes_ago">%dм.</string>
   <string name="DateUtils_today">Сегодня</string>
   <string name="DateUtils_yesterday">Вчера</string>
   <!--DeliveryStatus-->
@@ -317,7 +317,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">После отвязки это устройство больше не сможет отправлять или получать сообщения.</string>
   <string name="DeviceListActivity_network_connection_failed">Не удалось установить сетевое соединение</string>
   <string name="DeviceListActivity_try_again">Повторить</string>
-  <string name="DeviceListActivity_unlinking_device">Отвязываем устройство...</string>
+  <string name="DeviceListActivity_unlinking_device">Отвязываем устройство…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Отвязка устройства</string>
   <string name="DeviceListActivity_network_failed">Ошибка сети!</string>
   <!--DeviceListItem-->
@@ -518,7 +518,7 @@
 • Читать все ваши сообщения
 • Отправлять сообщения от вашего имени</string>
   <string name="DeviceProvisioningActivity_content_progress_title">Привязка устройства</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Привязываем новое устройство...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Привязываем новое устройство…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Устройство подтверждено!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Устройство не найдено.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Ошибка сети.</string>
@@ -854,7 +854,7 @@
   <string name="contact_filter_toolbar__show_dial_pad_description">Показать кнопки набора номера</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Нет контактов.</string>
-  <string name="contact_selection_group_activity__finding_contacts">Загружаем контакты...</string>
+  <string name="contact_selection_group_activity__finding_contacts">Загружаем контакты…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">Фото контакта</string>
   <!--ContactSelectionListFragment-->
@@ -988,7 +988,7 @@
   <string name="log_submit_activity__button_got_it">Понятно</string>
   <string name="log_submit_activity__button_compose_email">Написать письмо</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Этот журнал будет опубликован в интернете, чтобы разработчики смогли его просмотреть. Вы можете изучить и отредактировать его перед отправкой.</string>
-  <string name="log_submit_activity__loading_logs">Загружаем журналы...</string>
+  <string name="log_submit_activity__loading_logs">Загружаем журналы…</string>
   <string name="log_submit_activity__uploading_logs">Выгрузка журналов…</string>
   <string name="log_submit_activity__success">Успешно!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Скопируйте этот URL-адрес и добавьте его в отчет о проблеме или в письмо в службу поддержки:\n\n<b>%1$s</b>\n</string>
@@ -1015,7 +1015,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">ПРОСМОТРЕТЬ</string>
   <string name="message_recipients_list_item__resend">ОТПРАВИТЬ ЕЩЁ РАЗ</string>
-  <string name="message_recipients_list_item__resending">Отправляем ещё раз...</string>
+  <string name="message_recipients_list_item__resending">Отправляем ещё раз…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s присоединился(-лась) к группе.</item>
@@ -1403,7 +1403,7 @@
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Пожалуйста, введите код подтверждения, отправленный на %s.</string>
   <string name="RegistrationActivity_wrong_number">Неправильный номер</string>
   <string name="RegistrationActivity_call_me_instead_available_in">Позвоните мне вместо SMS \n (Доступно через %1$02d:%2$02d)</string>
-  <string name="RegistrationActivity_contact_signal_support">Связаться со службой поддержки Signal</string>
+  <string name="RegistrationActivity_contact_signal_support">Связаться со поддержкой Signal</string>
   <string name="RegistrationActivity_code_support_subject">Регистрация в Signal - код подтверждения для Android</string>
   <string name="RegistrationActivity_code_support_body">Тема: Регистрация в Signal - код подтверждения для Android\nИнформация об устройстве: %1$s\nВерсия Android: %2$s\n Версия Signal: %3$s\nРегион: %4$s</string>
   <string name="BackupUtil_never">Никогда</string>
