--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">Áno</string>
   <string name="no">Nie</string>
   <string name="delete">Zmazať</string>
-  <string name="please_wait">Čakajte prosím...</string>
+  <string name="please_wait">Čakajte prosím…</string>
   <string name="save">Uložiť</string>
   <string name="note_to_self">Poznámka pre seba</string>
   <!--AbstractNotificationBuilder-->
@@ -12,7 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationMigrationActivity-->
-  <string name="ApplicationMigrationActivity__signal_is_updating">Signal sa aktualizuje...</string>
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal sa aktualizuje…</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Aktuálne: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Ešte ste si nenastavili heslo!</string>
@@ -34,7 +34,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Toto natrvalo odomkne Signal a upozornenia správ.</string>
   <string name="ApplicationPreferencesActivity_disable">Vypnúť</string>
   <string name="ApplicationPreferencesActivity_unregistering">Rušenie registrácie</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Rušenie registrácie Signal správ a hovorov...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Rušenie registrácie Signal správ a hovorov…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Vypnúť Signal správy a hovory?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Zakážte Signal správy a hovory zrušením registrácie zo serveru. Pre ich opätovné použitie budete musieť svoje telefónne číslo znovu zaregistrovať.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Chyba pripojenia na server!</string>
@@ -70,7 +70,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal potrebuje prístup k fotoaparátu aby mohol vytvárať fotografie, ale prístup bol natrvalo zakázaný. Prosím v nastaveniach aplikácií zvoľte \"Oprávnenia\", a povoľte \"Fotoaparát\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Nahrávanie prílohy…</string>
-  <string name="AttachmentUploadJob_compressing_video_start">Komprimuje sa video...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Komprimuje sa video…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Chyba pri prehrávaní zvuku!</string>
   <!--BlockedContactsActivity-->
@@ -231,17 +231,17 @@
     <item quantity="other">Ukladám %1$d príloh</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Ukladanie prílohy na úložisko...</item>
-    <item quantity="few">Ukladanie %1$d príloh na úložisko...</item>
-    <item quantity="many">Ukladanie %1$d príloh na úložisko...</item>
-    <item quantity="other">Ukladanie %1$d príloh na úložisko...</item>
+    <item quantity="one">Ukladanie prílohy na úložisko…</item>
+    <item quantity="few">Ukladanie %1$d príloh na úložisko…</item>
+    <item quantity="many">Ukladanie %1$d príloh na úložisko…</item>
+    <item quantity="other">Ukladanie %1$d príloh na úložisko…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Čaká na spracovanie...</string>
+  <string name="ConversationFragment_pending">Čaká na spracovanie…</string>
   <string name="ConversationFragment_push">Dáta (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Mazanie</string>
-  <string name="ConversationFragment_deleting_messages">Mažú sa správy...</string>
+  <string name="ConversationFragment_deleting_messages">Mažú sa správy…</string>
   <string name="ConversationFragment_quoted_message_not_found">Pôvodná správa sa nenašla</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Pôvodná správa už nie je k dispozícii</string>
   <string name="ConversationFragment_failed_to_open_message">Nepodarilo sa otvoriť správu</string>
@@ -262,7 +262,7 @@
     <item quantity="other">Týmto natrvalo zmažete všetkých %1$d vybraných konverzácií.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Mazanie</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Mazanie vybraných konverzácií...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Mazanie vybraných konverzácií…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Konverzácia archivovaná</item>
     <item quantity="few">%d konverzácie archivované</item>
@@ -311,7 +311,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Po odpojení zariadenia nebudete môcť prijímať, ani odosielať správy.</string>
   <string name="DeviceListActivity_network_connection_failed">Pripojenie k sieti zlyhalo</string>
   <string name="DeviceListActivity_try_again">Skúsiť znova</string>
-  <string name="DeviceListActivity_unlinking_device">Odpojuje sa zariadenie...</string>
+  <string name="DeviceListActivity_unlinking_device">Odpojuje sa zariadenie…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Odpojenie zariadenia</string>
   <string name="DeviceListActivity_network_failed">Chyba siete! </string>
   <!--DeviceListItem-->
@@ -372,7 +372,7 @@
   <string name="GroupCreateActivity_avatar_content_description">Obrázok skupiny</string>
   <string name="GroupCreateActivity_menu_apply_button">Použiť</string>
   <string name="GroupCreateActivity_creating_group">Vytváranie %1$s…</string>
-  <string name="GroupCreateActivity_updating_group">Aktualizácia %1$s...</string>
+  <string name="GroupCreateActivity_updating_group">Aktualizácia %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Nepodarilo sa pridať %1$s, pretože nie je používateľom Signal.</string>
   <string name="GroupCreateActivity_loading_group_details">Načítavajú sa údaje o skupine…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Už ste v skupine.</string>
@@ -391,7 +391,7 @@
   <string name="InviteActivity_share">Zdieľať</string>
   <string name="InviteActivity_choose_contacts">Vybrať kontakty</string>
   <string name="InviteActivity_cancel">Zrušiť</string>
-  <string name="InviteActivity_sending">Odosiela sa...</string>
+  <string name="InviteActivity_sending">Odosiela sa…</string>
   <string name="InviteActivity_heart_content_description">Srdce</string>
   <string name="InviteActivity_invitations_sent">Pozvánky odoslané!</string>
   <string name="InviteActivity_invite_to_signal">Pozvať do Signalu</string>
@@ -411,7 +411,7 @@
   <string name="InviteActivity_no_app_to_share_to">Vyzerá to, že nemáte žiadne aplikácie kam by ste mohli zdieľať.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Priatelia nenechávajú priateľov chatovať nešifrovane.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Práca na pozadí...</string>
+  <string name="Job_working_in_the_background">Práca na pozadí…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Nepodarilo sa odoslať</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nové bezpečnostné číslo</string>
@@ -439,10 +439,10 @@
     <item quantity="other">Týmto natrvalo odstánite všetkých %1$d vybraných správ.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Mazanie</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Mažú sa správy...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Mažú sa správy…</string>
   <string name="MediaOverviewActivity_Documents">Dokumenty</string>
   <string name="MediaOverviewActivity_Select_all">Označiť všetko</string>
-  <string name="MediaOverviewActivity_collecting_attachments">Ukladám prílohy...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Ukladám prílohy…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Prebieha Signal hovor</string>
   <string name="NotificationBarManager__establishing_signal_call">Príprava na Signal hovor</string>
@@ -461,7 +461,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Označte ťuknutím</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Pridaj popis...</string>
+  <string name="MediaSendActivity_add_a_caption">Pridaj popis…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Položka bola odstránená, lebo prekračovala limit na veľkosť</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera je nedostupná.</string>
   <string name="MediaSendActivity_message_to_s">Správa pre %s</string>
@@ -512,7 +512,7 @@
 • Čítať všetky vaše správy
 \n• Odosielať správy vo vašom mene</string>
   <string name="DeviceProvisioningActivity_content_progress_title">Pridávam zariadenie</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Pridávam nové zariadenie...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Pridávam nové zariadenie…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Zariadenie schválené!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Nebolo nájdené žiadne zariadenie.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Chyba siete.</string>
@@ -710,7 +710,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Váš kontakt používa starú verziu Signalu. Pred overením bezpečnostného čísla ich požiadajte o aktualizáciu aplikácie.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Váš kontakt používa novšiu verziu Signalu, nekompatibilnú s formátom QR kódu. Prosím aktualizujte pre porovnanie.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Naskenovaný QR kód nie je správne formátovaný verifikačný kód bezpečnostného čísla. Prosím skúste ho naskenovať znova.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Zdielať bezpečnostné číslo cez...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Zdielať bezpečnostné číslo cez…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Naše Signal bezpečnostné číslo:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Vyzerá to, že nemáte žiadne aplikácie kam by sa dalo zdieľať.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">V schránke sa nenašlo žiadne bezpečnostné číslo pre porovnanie</string>
@@ -1010,7 +1010,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">ZOBRAZIŤ</string>
   <string name="message_recipients_list_item__resend">POSLAŤ ZNOVU</string>
-  <string name="message_recipients_list_item__resending">Odosiela sa znova...</string>
+  <string name="message_recipients_list_item__resending">Odosiela sa znova…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s sa pripojil/a do skupiny. </item>
@@ -1064,7 +1064,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Ak si chcete overiť zabezpečenie vášho šifrovania s %s, porovnajte číslo vyššie s číslom na druhom zariadení. Môžete tiež naskenovať kód na ich zariadení alebo ich požiadať o naskenovanie vášho kódu. <a href="https://signal.org/redirect/safety-numbers">Zistiť viac.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Ťuknutím naskenujte</string>
-  <string name="verify_display_fragment__loading">Načítava sa...</string>
+  <string name="verify_display_fragment__loading">Načítava sa…</string>
   <string name="verify_display_fragment__verified">Overené</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Zdieľať bezpečnostné číslo</string>
@@ -1236,7 +1236,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Nová správa pre...</string>
+  <string name="contact_selection_list__unknown_contact">Nová správa pre…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Zavolať</string>
   <!--conversation_callable_secure-->
@@ -1341,12 +1341,12 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Mazanie</string>
-  <string name="trimmer__deleting_old_messages">Mažú sa staré správy...</string>
+  <string name="trimmer__deleting_old_messages">Mažú sa staré správy…</string>
   <string name="trimmer__old_messages_successfully_deleted">Staré správy úspešne vymazané</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona prenosu</string>
-  <string name="ConversationListFragment_loading">Načítava sa...</string>
-  <string name="CallNotificationBuilder_connecting">Pripájanie...</string>
+  <string name="ConversationListFragment_loading">Načítava sa…</string>
+  <string name="CallNotificationBuilder_connecting">Pripájanie…</string>
   <string name="Permissions_permission_required">Potrebné povolenie</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal potrebuje prístup k SMS správam aby mohol posielať SMS správy, ale prístup bol natrvalo zakázaný. Prosím v nastaveniach aplikácií zvoľte \"Oprávnenia\", a povoľte \"SMS\".</string>
   <string name="Permissions_continue">Pokračovať</string>
@@ -1371,8 +1371,8 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="RegistrationActivity_restore">Obnovenie</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Zálohy z novšej verzie Signal sa nedajú importovať.</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Nesprávne heslo pre zálohy</string>
-  <string name="RegistrationActivity_checking">Kontrola...</string>
-  <string name="RegistrationActivity_d_messages_so_far">Zatiaľ %d správ...</string>
+  <string name="RegistrationActivity_checking">Kontrola…</string>
+  <string name="RegistrationActivity_d_messages_so_far">Zatiaľ %d správ…</string>
   <string name="RegistrationActivity_restore_from_backup">Obnoviť zo zálohy?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Obnovte Vaše správy a médiá z úložiska. Keď nevykonáte obnovu teraz, neskôr nebude možná.</string>
   <string name="RegistrationActivity_backup_size_s">Veľkosť zálohy: %s</string>
@@ -1387,7 +1387,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal potrebuje prístup k úložisku aby mohol vytvárať zálohy, ale prístup bol natrvalo zakázaný. Prosím v nastaveniach aplikácií zvoľte \"Oprávnenia\", a povoľte \"Úložisko\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Posledná záloha: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Prebieha</string>
-  <string name="LocalBackupJob_creating_backup">Vytváranie zálohy...</string>
+  <string name="LocalBackupJob_creating_backup">Vytváranie zálohy…</string>
   <string name="ProgressPreference_d_messages_so_far">Zatiaľ %d správ</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Prosím zadajte overovací kód odoslaný na %s.</string>
   <string name="RegistrationActivity_wrong_number">Nesprávne číslo</string>
