--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">ใช่</string>
   <string name="no">ไม่</string>
   <string name="delete">ลบ</string>
-  <string name="please_wait">โปรดรอ...</string>
+  <string name="please_wait">โปรดรอ…</string>
   <string name="save">บันทึก</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">ข้อความใหม่</string>
@@ -174,14 +174,14 @@
     <item quantity="other">บันทึกไฟล์แนบแล้ว %1$d</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="other">บันทึกไฟล์แนบไปยังที่เก็บข้อมูลแล้ว %1$d...</item>
+    <item quantity="other">บันทึกไฟล์แนบไปยังที่เก็บข้อมูลแล้ว %1$d…</item>
   </plurals>
-  <string name="ConversationFragment_pending">รอดำเนินการ...</string>
+  <string name="ConversationFragment_pending">รอดำเนินการ…</string>
   <string name="ConversationFragment_push">ข้อมูล (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">กำลังลบ</string>
-  <string name="ConversationFragment_deleting_messages">กำลังลบข้อความ...</string>
+  <string name="ConversationFragment_deleting_messages">กำลังลบข้อความ…</string>
   <string name="ConversationFragment_quoted_message_not_found">ไม่พบข้อความดั้งเดิม</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">ข้อความดั้งเดิมไม่มีอยู่แล้ว</string>
   <!--ConversationListActivity-->
@@ -195,7 +195,7 @@
     <item quantity="other">นี่จะลบ %1$d การสนทนาที่ถูกเลือกทั้งหมด อย่างถาวร</item>
   </plurals>
   <string name="ConversationListFragment_deleting">กำลังลบ</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">กำลังลบการสนทนาที่เลือก...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">กำลังลบการสนทนาที่เลือก…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="other">%dการสนทนาถูกเก็บเข้าที่เก็บถาวร</item>
   </plurals>
@@ -235,7 +235,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">อุปกรณ์นี้จะไม่สามารถส่งหรือรับข้อความได้อีกต่อไปเมื่อทำการเลิกเชื่อมโยง</string>
   <string name="DeviceListActivity_network_connection_failed">การเชื่อมต่อเครือข่ายล้มเหลว</string>
   <string name="DeviceListActivity_try_again">ลองอีกครั้ง</string>
-  <string name="DeviceListActivity_unlinking_device">กำลังเลิกเชื่อมโยงอุปกรณ์...</string>
+  <string name="DeviceListActivity_unlinking_device">กำลังเลิกเชื่อมโยงอุปกรณ์…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">กำลังเลิกเชื่อมโยงอุปกรณ์</string>
   <string name="DeviceListActivity_network_failed">เครือข่ายล้มเหลว</string>
   <!--DeviceListItem-->
@@ -286,9 +286,9 @@
   <string name="GroupCreateActivity_avatar_content_description">อวตารกลุ่ม</string>
   <string name="GroupCreateActivity_menu_apply_button">นำไปใช้</string>
   <string name="GroupCreateActivity_creating_group">กำลังสร้าง %1$s…</string>
-  <string name="GroupCreateActivity_updating_group">กำลังปรับปรุง %1$s...</string>
+  <string name="GroupCreateActivity_updating_group">กำลังปรับปรุง %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">ไม่สามารถเพิ่ม %1$s ได้ เนื่องจากไม่ใช่ผู้ใช้ Signal</string>
-  <string name="GroupCreateActivity_loading_group_details">กำลังโหลดรายละเอียดของกลุ่ม...</string>
+  <string name="GroupCreateActivity_loading_group_details">กำลังโหลดรายละเอียดของกลุ่ม…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">คุณอยู่ในกลุ่มอยู่แล้ว</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">แบ่งปันชื่อและรูปโปรไฟล์ของคุณให้กับกลุ่มนี้หรือไม่</string>
@@ -305,7 +305,7 @@
   <string name="InviteActivity_share">แบ่งปัน</string>
   <string name="InviteActivity_choose_contacts">เลือกผู้ติดต่อ</string>
   <string name="InviteActivity_cancel">ยกเลิก</string>
-  <string name="InviteActivity_sending">กำลังส่ง...</string>
+  <string name="InviteActivity_sending">กำลังส่ง…</string>
   <string name="InviteActivity_heart_content_description">หัวใจ</string>
   <string name="InviteActivity_invitations_sent">ส่งคำเชิญแล้ว</string>
   <string name="InviteActivity_invite_to_signal">เชิญมาใช้ Signal</string>
@@ -337,10 +337,10 @@
     <item quantity="other">นี่จะลบ %1$d ข้อความที่ถูกเลือกทั้งหมด อย่างถาวร</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">กำลังลบ</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">กำลังลบข้อความ...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">กำลังลบข้อความ…</string>
   <string name="MediaOverviewActivity_Documents">เอกสาร</string>
   <string name="MediaOverviewActivity_Select_all">เลือกทั้งหมด</string>
-  <string name="MediaOverviewActivity_collecting_attachments">รวบรวมสิ่งแนบ...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">รวบรวมสิ่งแนบ…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">กำลังใช้สาย Signal อยู่</string>
   <string name="NotificationBarManager__establishing_signal_call">กำลังเริ่มสาย Signal</string>
@@ -395,7 +395,7 @@
         \n• ส่งข้อความในชื่อของคุณ
     </string>
   <string name="DeviceProvisioningActivity_content_progress_title">กำลังเชื่อมโยงอุปกรณ์</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">กำลังเชื่อมโยงอุปกรณ์ใหม่...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">กำลังเชื่อมโยงอุปกรณ์ใหม่…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">อนุมัติอุปกรณ์แล้ว</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">ไม่พบอุปกรณ์</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">ข้อผิดพลาดจากเครือข่าย</string>
@@ -557,7 +557,7 @@
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">ผู้ติดต่อของคุณใช้ Signal เวอร์ชันเก่า กรุณาขอให้เขาทำการอัพเดตก่อนที่จะยืนยันรหัสความปลอดภัยของคุณ</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">ผู้ติดต่อของคุณใช้ Signal เวอร์ชันใหม่กว่า และมีรูปแบบรหัส QR ที่เข้ากันไม่ได้กับของคุณ กรุณาอัพเดตเพื่อการเปรียบเทียบ</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">รหัส QR ที่สแกนมาไม่ใช่รหัสยืนยันของรหัสความปลอดภัยที่มีรูปแบบที่ถูกต้อง กรุณาสแกนใหม่อีกรอบ</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">แบ่งปันรหัสความปลอดภัยผ่าน...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">แบ่งปันรหัสความปลอดภัยผ่าน…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">รหัสความปลอดภัยของ Signal ของเรา:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">ดูเหมือนคุณไม่มีแอปอะไรที่จะแบ่งปันไปได้เลย</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">ไม่พบรหัสความปลอดภัยที่จะเปรียบเทียบในคลิปบอร์ด</string>
@@ -727,7 +727,7 @@
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">เลื่อนลงด้านล่างสุด</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">กำลังโหลดประเทศ...</string>
+  <string name="country_selection_fragment__loading_countries">กำลังโหลดประเทศ…</string>
   <string name="country_selection_fragment__search">ค้นหา</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">สแกนรหัส QR ที่แสดงบนอุปกรณ์เพื่อทำการเชื่อมโยง</string>
@@ -812,7 +812,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">ดู</string>
   <string name="message_recipients_list_item__resend">ส่งใหม่</string>
-  <string name="message_recipients_list_item__resending">กำลังส่งใหม่...</string>
+  <string name="message_recipients_list_item__resending">กำลังส่งใหม่…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="other">%1$s ได้เข้าร่วมกลุ่ม</item>
@@ -863,7 +863,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[หากคุณต้องการยืนยันความปลอดภัยในการเข้ารหัสระหว่างคุณกับ %s ให้เปรียบเทียบรหัสด้านบนนี้กับรหัสบนอุปกรณ์ของเขาหรืออีกทางหนึ่ง คุณสามารถสแกนรหัสบนโทรศัพท์ของเขา หรือขอให้เขาสแกนรหัสของคุณ <a href="https://signal.org/redirect/safety-numbers">เรียนรู้เพิ่มเติม</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">แตะเพื่อสแกน</string>
-  <string name="verify_display_fragment__loading">กำลังโหลด...</string>
+  <string name="verify_display_fragment__loading">กำลังโหลด…</string>
   <string name="verify_display_fragment__verified">ยืนยันแล้ว</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">แบ่งปันรหัสความปลอดภัย</string>
@@ -1024,7 +1024,7 @@
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">ข้อความใหม่ถึง...</string>
+  <string name="contact_selection_list__unknown_contact">ข้อความใหม่ถึง…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">โทร</string>
   <!--conversation_callable_secure-->
@@ -1123,12 +1123,12 @@
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">กำลังลบ</string>
-  <string name="trimmer__deleting_old_messages">กำลังลบข้อความเก่า...</string>
+  <string name="trimmer__deleting_old_messages">กำลังลบข้อความเก่า…</string>
   <string name="trimmer__old_messages_successfully_deleted">ลบข้อความเก่าสำเร็จ</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">ไอคอนขนส่ง</string>
-  <string name="ConversationListFragment_loading">กำลังโหลด...</string>
-  <string name="CallNotificationBuilder_connecting">กำลังเชื่อมต่อ...</string>
+  <string name="ConversationListFragment_loading">กำลังโหลด…</string>
+  <string name="CallNotificationBuilder_connecting">กำลังเชื่อมต่อ…</string>
   <string name="Permissions_permission_required">ต้องได้รับอนุญาตก่อน</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">เพื่อที่จะส่ง SMS ได้ Signal ต้องได้รับอนุญาตให้เข้าถึง SMS แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่าแอป เลือก \"การอนุญาต\" และเปิดใช้งาน \"SMS\"</string>
   <string name="Permissions_continue">ดำเนินการต่อ</string>
@@ -1152,8 +1152,8 @@
   <string name="RegistrationActivity_enter_backup_passphrase">ป้อนวลีรหัสผ่านของการสำรองข้อมูล</string>
   <string name="RegistrationActivity_restore">คืนค่า</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">วลีรหัสผ่านของการสำรองข้อมูลไม่ถูกต้อง</string>
-  <string name="RegistrationActivity_checking">กำลังตรวจสอบ...</string>
-  <string name="RegistrationActivity_d_messages_so_far">%d ข้อความจนถึงตอนนี้...</string>
+  <string name="RegistrationActivity_checking">กำลังตรวจสอบ…</string>
+  <string name="RegistrationActivity_d_messages_so_far">%d ข้อความจนถึงตอนนี้…</string>
   <string name="RegistrationActivity_restore_from_backup">คืนค่าจากการสำรองข้อมูลหรือไม่</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">คืนค่าข้อความและสื่อของคุณจากการสำรองข้อมูลในเครื่อง หากคุณไม่ทำการคืนค่าในตอนนี้ คุณจะไม่สามารถคืนค่าได้อีกสนภายหลัง</string>
   <string name="RegistrationActivity_backup_size_s">ขนาดของการสำรองข้อมูล: %s</string>
@@ -1168,7 +1168,7 @@
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">เพื่อที่จะสำรองข้อมูลได้ Signal ต้องได้รับอนุญาตให้เข้าถึงที่เก็บข้อมูลภายนอก แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่าแอป เลือก \"การอนุญาต\" และเปิดใช้งาน \"ที่เก็บข้อมูล\"</string>
   <string name="ChatsPreferenceFragment_last_backup_s">การสำรองข้อมูลล่าสุด: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">กำลังดำเนินการ</string>
-  <string name="LocalBackupJob_creating_backup">กำลังสร้างการสำรองข้อมูล...</string>
+  <string name="LocalBackupJob_creating_backup">กำลังสร้างการสำรองข้อมูล…</string>
   <string name="ProgressPreference_d_messages_so_far">%d ข้อความจนถึงตอนนี้</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">กรุณาใส่รหัสยืนยันเพื่อส่งไปที่ %s</string>
   <string name="BackupUtil_never">ไม่เลย</string>
