--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -4,7 +4,7 @@
   <string name="yes">Так</string>
   <string name="no">Ні</string>
   <string name="delete">Видалити</string>
-  <string name="please_wait">Будь ласка, зачекайте...</string>
+  <string name="please_wait">Будь ласка, зачекайте…</string>
   <string name="save">Зберегти</string>
   <string name="note_to_self">Замітка для себе</string>
   <!--AbstractNotificationBuilder-->
@@ -33,7 +33,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Це назавжди розблокує Signal та сповіщення повідомлень.</string>
   <string name="ApplicationPreferencesActivity_disable">Вимкнути</string>
   <string name="ApplicationPreferencesActivity_unregistering">Скасувати реєстрацію</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Скасування реєстрації на повідомлення та виклики Signal...</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Скасування реєстрації на повідомлення та виклики Signal…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Вимкнути повідомлення та виклики Signal?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Скасування реєстрації на сервері вимкне повідомлення та виклики Signal. Вам знадобиться знову зареєструвати ваш номер телефону, щоб користуватися ними в майбутньому.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Помилка підключення до сервера!</string>
@@ -212,17 +212,17 @@
     <item quantity="other">Збереження %1$d вкладень</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Збереження вкладення до сховища...</item>
-    <item quantity="few">Збереження %1$d вкладень до сховища...</item>
-    <item quantity="many">Збереження %1$d вкладень до сховища...</item>
-    <item quantity="other">Збереження %1$d вкладень до сховища...</item>
+    <item quantity="one">Збереження вкладення до сховища…</item>
+    <item quantity="few">Збереження %1$d вкладень до сховища…</item>
+    <item quantity="many">Збереження %1$d вкладень до сховища…</item>
+    <item quantity="other">Збереження %1$d вкладень до сховища…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Очікування...</string>
+  <string name="ConversationFragment_pending">Очікування…</string>
   <string name="ConversationFragment_push">Дані (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Видалення</string>
-  <string name="ConversationFragment_deleting_messages">Видалення повідомлень...</string>
+  <string name="ConversationFragment_deleting_messages">Видалення повідомлень…</string>
   <string name="ConversationFragment_quoted_message_not_found">Оригінальне повідомлення не знайдено</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Оригінальне повідомлення більше не доступно</string>
   <!--ConversationListActivity-->
@@ -242,7 +242,7 @@
     <item quantity="other">Це остаточно видалить усі %1$d обрані бесіди.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Видалення</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Видалення обраних розмов...</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Видалення обраних розмов…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Розмову заархівовано</item>
     <item quantity="few">%d розмови заархівовано</item>
@@ -289,7 +289,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Після від\'єднання цього пристрою він більше не зможе відправляти та одержувати повідомлення.</string>
   <string name="DeviceListActivity_network_connection_failed">Проблема з\'єднання</string>
   <string name="DeviceListActivity_try_again">Спробуйте ще</string>
-  <string name="DeviceListActivity_unlinking_device">Від\'єднання пристрою...</string>
+  <string name="DeviceListActivity_unlinking_device">Від\'єднання пристрою…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Від\'єднання пристрою</string>
   <string name="DeviceListActivity_network_failed">Помилка мережі!</string>
   <!--DeviceListItem-->
@@ -322,7 +322,7 @@
   <string name="ExperienceUpgradeActivity_no_thanks">Ні, дякую</string>
   <string name="ExperienceUpgradeActivity_got_it">Ясно</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Отримуємо повідомлення...</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Отримуємо повідомлення…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Постійний збій зв\'язку Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal не зміг зареєструватись у сервісах Google Play. Виклики та повідомлення Signal наразі вимкнено, спробуйте перереєструватися у Налаштуваннях &gt; Додатково.</string>
@@ -343,9 +343,9 @@
   <string name="GroupCreateActivity_avatar_content_description">Зображення групи</string>
   <string name="GroupCreateActivity_menu_apply_button">Застосувати</string>
   <string name="GroupCreateActivity_creating_group">Створення %1$s…</string>
-  <string name="GroupCreateActivity_updating_group">Оновлення %1$s...</string>
+  <string name="GroupCreateActivity_updating_group">Оновлення %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Не вдалося додати %1$s, тому що вони не є користувачами Signal.</string>
-  <string name="GroupCreateActivity_loading_group_details">Завантаження деталей групи...</string>
+  <string name="GroupCreateActivity_loading_group_details">Завантаження деталей групи…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Ви вже у групі.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Поділитися іменем профілю та світлиною з цією групою?</string>
@@ -362,7 +362,7 @@
   <string name="InviteActivity_share">Поділитися</string>
   <string name="InviteActivity_choose_contacts">Оберіть контакти</string>
   <string name="InviteActivity_cancel">Скасувати</string>
-  <string name="InviteActivity_sending">Надсилання...</string>
+  <string name="InviteActivity_sending">Надсилання…</string>
   <string name="InviteActivity_heart_content_description">Серце</string>
   <string name="InviteActivity_invitations_sent">Запрошення надіслано!</string>
   <string name="InviteActivity_invite_to_signal">Запросити до Signal</string>
@@ -382,7 +382,7 @@
   <string name="InviteActivity_no_app_to_share_to">Схоже, що у вас немає програм, щоб поділитися.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Друзі не мають дозволяти друзям незашифровано спілкуватися!</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Опрацьовується в фоні...</string>
+  <string name="Job_working_in_the_background">Опрацьовується в фоні…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Не вдалося надіслати</string>
   <string name="MessageDetailsRecipient_new_safety_number">Новий номер безпеки</string>
@@ -410,10 +410,10 @@
     <item quantity="other">Це назавжди видалить усі %1$d обраних повідомлень.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Видалення</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Видалення повідомлень...</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Видалення повідомлень…</string>
   <string name="MediaOverviewActivity_Documents">Документи</string>
   <string name="MediaOverviewActivity_Select_all">Обрати все</string>
-  <string name="MediaOverviewActivity_collecting_attachments">Збираю вкладення...</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Збираю вкладення…</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Відбувається виклик Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">Встановлення виклику Signal</string>
@@ -424,14 +424,14 @@
   <string name="NotificationBarManager__cancel_call">Скасувати виклик</string>
   <!--NotificationMmsMessageRecord-->
   <string name="NotificationMmsMessageRecord_multimedia_message">Мультимедійне повідомлення</string>
-  <string name="NotificationMmsMessageRecord_downloading_mms_message">Завантаження MMS...</string>
+  <string name="NotificationMmsMessageRecord_downloading_mms_message">Завантаження MMS…</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Виникла помилка при завантаженні MMS, натисніть щоб повторити</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Відправити %s</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Нажміть щоб обрати</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Добавити заголовок...</string>
+  <string name="MediaSendActivity_add_a_caption">Добавити заголовок…</string>
   <string name="MediaSendActivity_camera_unavailable">Камера не доступна</string>
   <string name="MediaSendActivity_message_to_s">Відправити до %s</string>
   <string name="MediaSendActivity_message">Повідомлення</string>
@@ -451,6 +451,7 @@
   <string name="MessageRecord_missed_call_from">Пропущено виклик від %s</string>
   <string name="MessageRecord_s_joined_signal">%s приєднався до Signal!</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">Ви заборонили зникаючі повідомлення</string>
+  <string name="MessageRecord_you_set_disappearing_message_time_to_s">Ви встановлюєте час зникнення повідомлення на %1$s.</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">Ваш номер безпеки із %s змінився.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified">Ви підтвердили ваш номер безпеки із %s</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Ви підтвердили ваш номер безпеки із %sз іншого пристрою</string>
@@ -470,7 +471,7 @@
 \n• Надсилати повідомлення від вашого імені
  </string>
   <string name="DeviceProvisioningActivity_content_progress_title">З\'язування пристрою</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">З\'язування нового пристрою...</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">З\'язування нового пристрою…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Пристрій затверджено!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Пристрій не знайдено.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Помилка мережі.</string>
@@ -643,7 +644,7 @@
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Ваш контакт працює на давнішій версії Signal. Будь ласка, попросіть його/її оновитися перед перевіркою вашого номера безпеки.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Ваш контакт працює на новішій версії Signal із несумісним форматом QR-коду. Будь ласка, оновіться, щоб порівняти.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Сканований QR-код хибно форматований код підтвердження номера безпеки. Будь ласка, спробуйте сканувати знову.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Поділитися номером безпеки через...</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Поділитися номером безпеки через…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Наш номер безпеки Signal:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Схоже, що у вас немає програм, щоб поділитися.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">У буфері обміну не було знайдено номеру безпеки для порівняння</string>
@@ -764,7 +765,7 @@
   <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Контактів не знайдено.</string>
-  <string name="contact_selection_group_activity__finding_contacts">Завантаження контактів...</string>
+  <string name="contact_selection_group_activity__finding_contacts">Завантаження контактів…</string>
   <!--single_contact_selection_activity-->
   <string name="SingleContactSelectionActivity_contact_photo">Фото контакту</string>
   <!--ContactSelectionListFragment-->
@@ -813,7 +814,7 @@
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Прокрутить до самого низу</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Завантаження країн...</string>
+  <string name="country_selection_fragment__loading_countries">Завантаження країн…</string>
   <string name="country_selection_fragment__search">Пошук</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Проскануйте QR код на пристрої, щоб зв\'язати його</string>
@@ -893,8 +894,8 @@
   <string name="log_submit_activity__button_submit">Відіслати</string>
   <string name="log_submit_activity__button_got_it">Ясно</string>
   <string name="log_submit_activity__button_compose_email">Написати електронного листа</string>
-  <string name="log_submit_activity__loading_logs">Завантаження журналу...</string>
-  <string name="log_submit_activity__uploading_logs">Вивантаження журналу...</string>
+  <string name="log_submit_activity__loading_logs">Завантаження журналу…</string>
+  <string name="log_submit_activity__uploading_logs">Вивантаження журналу…</string>
   <string name="log_submit_activity__success">Успішно!</string>
   <string name="log_submit_activity__copied_to_clipboard">Скопійовано до буфера обміну</string>
   <string name="log_submit_activity__choose_email_app">Обрати додаток електронної пошти</string>
@@ -918,7 +919,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">ВИГЛЯД</string>
   <string name="message_recipients_list_item__resend">НАДІСЛАТИ ЗНОВУ</string>
-  <string name="message_recipients_list_item__resending">Повторне пересилання...</string>
+  <string name="message_recipients_list_item__resending">Повторне пересилання…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s приєднується до групи.</item>
@@ -972,7 +973,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Якщо ви хочете перевірити безпеку вашого шифрування із %s, порівняйте номер вище із номером на його/її пристрої. Інший спосіб: ви можете сканувати код на його/її телефоні, або попросити його/її сканувати ваш код. <a href="https://signal.org/redirect/safety-numbers">Дізнатися більше про перевірку номерів безпеки</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Натисніть, щоб сканувати</string>
-  <string name="verify_display_fragment__loading">Завантаження...</string>
+  <string name="verify_display_fragment__loading">Завантаження…</string>
   <string name="verify_display_fragment__verified">Перевірено</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Поділитися номером безпеки</string>
@@ -1137,7 +1138,7 @@
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Нове повідомлення для...</string>
+  <string name="contact_selection_list__unknown_contact">Нове повідомлення для…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Виклик</string>
   <!--conversation_callable_secure-->
@@ -1241,12 +1242,12 @@
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Видалення</string>
-  <string name="trimmer__deleting_old_messages">Видалення старих повідомлень...</string>
+  <string name="trimmer__deleting_old_messages">Видалення старих повідомлень…</string>
   <string name="trimmer__old_messages_successfully_deleted">Старі повідомлення було успішно видалено</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Логотип типу зв\'язку</string>
-  <string name="ConversationListFragment_loading">Завантаження...</string>
-  <string name="CallNotificationBuilder_connecting">Підключення...</string>
+  <string name="ConversationListFragment_loading">Завантаження…</string>
+  <string name="CallNotificationBuilder_connecting">Підключення…</string>
   <string name="Permissions_permission_required">Необхідний дозвіл</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal потребує дозволу \"SMS\", але наразі дозволу немає. Будь-ласка, перейдіть до налаштувань додатку, оберіть \"Дозволи\" та увімкніть \"SMS\".</string>
   <string name="Permissions_continue">Продовжити</string>
@@ -1270,8 +1271,8 @@
   <string name="RegistrationActivity_enter_backup_passphrase">Введіть фразу-пароль</string>
   <string name="RegistrationActivity_restore">Відновити</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Хибна фраза-пароль!</string>
-  <string name="RegistrationActivity_checking">Перевірка...</string>
-  <string name="RegistrationActivity_d_messages_so_far">Залишилось %d повідомлень...</string>
+  <string name="RegistrationActivity_checking">Перевірка…</string>
+  <string name="RegistrationActivity_d_messages_so_far">Залишилось %d повідомлень…</string>
   <string name="RegistrationActivity_restore_from_backup">Відновити резервну копію?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Відновити ваші повідомлення та медіа-файли із локальної резервної копії. Якщо Ви не бажаєте цього робити зараз, це можна зробити потім.</string>
   <string name="RegistrationActivity_backup_size_s">Розмір резервної копії: %s</string>
@@ -1286,7 +1287,7 @@
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal потребує дозволу \"Зберігання\", щоб створювати резервні копії, але наразі доступу немає. Будь ласка, перейдіть до налаштувань додатку, оберіть \"Дозволи\", та увімкніть \"Зберігання\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Остання резервна копія: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">В процесі</string>
-  <string name="LocalBackupJob_creating_backup">Створення резервної копії...</string>
+  <string name="LocalBackupJob_creating_backup">Створення резервної копії…</string>
   <string name="ProgressPreference_d_messages_so_far">Залишилось %d повідомлень</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Будь-ласка, введіть перевірочний код що відіслано до %s</string>
   <string name="RegistrationActivity_wrong_number">Недоступний номер</string>
